@@ -1,9 +1,14 @@
 package ua.com.fielden.platform.companion;
 
+import com.google.inject.ImplementedBy;
+import com.google.inject.Inject;
+import com.google.inject.assistedinject.Assisted;
+import jakarta.annotation.Nullable;
 import org.apache.logging.log4j.Logger;
 import org.hibernate.Session;
+import org.hibernate.StaleStateException;
+import org.hibernate.resource.transaction.spi.TransactionStatus;
 import org.joda.time.DateTime;
-import ua.com.fielden.platform.dao.CommonEntityDao;
 import ua.com.fielden.platform.dao.IEntityDao;
 import ua.com.fielden.platform.dao.exceptions.EntityAlreadyExists;
 import ua.com.fielden.platform.dao.exceptions.EntityCompanionException;
@@ -14,51 +19,65 @@ import ua.com.fielden.platform.entity.AbstractUnionEntity;
 import ua.com.fielden.platform.entity.ActivatableAbstractEntity;
 import ua.com.fielden.platform.entity.annotation.DeactivatableDependencies;
 import ua.com.fielden.platform.entity.annotation.MapEntityTo;
+import ua.com.fielden.platform.entity.annotation.MapTo;
 import ua.com.fielden.platform.entity.annotation.Required;
 import ua.com.fielden.platform.entity.factory.ICompanionObjectFinder;
 import ua.com.fielden.platform.entity.fetch.FetchModelReconstructor;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
 import ua.com.fielden.platform.entity.meta.PropertyDescriptor;
-import ua.com.fielden.platform.entity.query.DbVersion;
-import ua.com.fielden.platform.entity.query.EntityAggregates;
-import ua.com.fielden.platform.entity.query.EntityFetcher;
-import ua.com.fielden.platform.entity.query.QueryExecutionContext;
+import ua.com.fielden.platform.entity.query.IDbVersionProvider;
+import ua.com.fielden.platform.entity.query.IEntityFetcher;
 import ua.com.fielden.platform.entity.query.fluent.fetch;
-import ua.com.fielden.platform.entity.query.model.AggregatedResultQueryModel;
 import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
+import ua.com.fielden.platform.entity.query.model.FillModelBuilder;
+import ua.com.fielden.platform.entity.query.model.IFillModel;
+import ua.com.fielden.platform.entity.validation.EntityExistsValidator;
 import ua.com.fielden.platform.error.Result;
+import ua.com.fielden.platform.meta.EntityMetadata;
+import ua.com.fielden.platform.meta.IDomainMetadata;
+import ua.com.fielden.platform.meta.PropertyMetadata;
 import ua.com.fielden.platform.reflection.AnnotationReflector;
-import ua.com.fielden.platform.reflection.Finder;
+import ua.com.fielden.platform.security.user.IUserProvider;
 import ua.com.fielden.platform.security.user.User;
 import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.utils.EntityUtils;
+import ua.com.fielden.platform.utils.IUniversalConstants;
 
 import javax.persistence.OptimisticLockException;
-import java.lang.reflect.Field;
 import java.util.*;
-import java.util.function.*;
-import java.util.stream.Collectors;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 import static java.lang.String.format;
+import static java.util.Objects.requireNonNull;
 import static java.util.Optional.empty;
 import static java.util.Optional.of;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.hibernate.LockOptions.UPGRADE;
 import static ua.com.fielden.platform.companion.helper.KeyConditionBuilder.createQueryByKey;
 import static ua.com.fielden.platform.entity.AbstractEntity.ID;
 import static ua.com.fielden.platform.entity.ActivatableAbstractEntity.ACTIVE;
+import static ua.com.fielden.platform.entity.ActivatableAbstractEntity.REF_COUNT;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.from;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
+import static ua.com.fielden.platform.entity.query.model.IFillModel.emptyFillModel;
+import static ua.com.fielden.platform.entity.validation.ActivePropertyValidator.ERR_INACTIVE_REFERENCES;
+import static ua.com.fielden.platform.entity.validation.EntityExistsValidator.ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE;
 import static ua.com.fielden.platform.entity.validation.custom.DefaultEntityValidator.validateWithoutCritOnly;
 import static ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator.ID_SEQUENCE_NAME;
-import static ua.com.fielden.platform.reflection.ActivatableEntityRetrospectionHelper.*;
+import static ua.com.fielden.platform.error.Result.failure;
+import static ua.com.fielden.platform.reflection.ActivatableEntityRetrospectionHelper.isActivatableReference;
 import static ua.com.fielden.platform.reflection.Reflector.isMethodOverriddenOrDeclared;
 import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getEntityTitleAndDesc;
+import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getTitleAndDesc;
 import static ua.com.fielden.platform.types.tuples.T2.t2;
 import static ua.com.fielden.platform.utils.DbUtils.nextIdValue;
 import static ua.com.fielden.platform.utils.EntityUtils.areEqual;
-import static ua.com.fielden.platform.utils.EntityUtils.equalsEx;
+import static ua.com.fielden.platform.utils.EntityUtils.isEntityType;
+import static ua.com.fielden.platform.utils.MiscUtilities.optional;
 import static ua.com.fielden.platform.utils.Validators.findActiveDeactivatableDependencies;
 
 /**
@@ -69,61 +88,84 @@ import static ua.com.fielden.platform.utils.Validators.findActiveDeactivatableDe
  * @param <T>
  */
 public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements IEntityActuator<T> {
+
     public static final String ERR_COULD_NOT_RESOLVE_CONFLICTING_CHANGES = "Could not resolve conflicting changes.";
     public static final String ERR_OPTIMISTIC_LOCK = "%s [%s] was updated or deleted by another user. Please try saving again.";
+    public static final String ERR_CONFLICTING_CONCURRENT_CHANGE = "There was a conflicting change by another user. Please try saving again.";
+    public static final String ERR_ALREADY_EXISTS = "%s [%s] already exists.";
+    public static final String ERR_NOW_CONSTANT_MISSING_VALUE = "The now() constant has not been assigned!";
+    public static final String ERR_NO_VALUE_FOR_AUTO_ASSIGNABLE_PROP = "Property %s@%s is marked as assignable before save, but no value could be determined.";
+    public static final String ERR_NO_CURRENT_USER = "The current user is not defined.";
 
     private final Supplier<Session> session;
     private final Supplier<String> transactionGuid;
-    private final Supplier<DbVersion> dbVersion;
+    private final IDbVersionProvider dbVersionProvider;
     
     private final Class<T> entityType;
     private final Class<? extends Comparable<?>> keyType;
-    private final Supplier<ICompanionObjectFinder> coFinder;
-    private final Supplier<QueryExecutionContext> newQueryExecutionContext;
-    private final Supplier<User> user;
+    private final ICompanionObjectFinder coFinder;
+    private final IDomainMetadata domainMetadata;
+    private final IEntityFetcher entityFetcher;
+    private final IUserProvider userProvider;
     private final Supplier<DateTime> now;
     
-    private final BiConsumer<T, List<String>> processAfterSaveEvent;
+    private final BiConsumer<T, Set<String>> processAfterSaveEvent;
     private final Consumer<MetaProperty<?>> assignBeforeSave;
 
-    private final BiFunction<Long, fetch<T>, T> findById;
+    private final FindEntityById<T> findById;
     private final Function<EntityResultQueryModel<T>, Boolean> entityExists;
 
     private Boolean targetEntityTypeHasValidateOverridden;
     
     private final Logger logger;
-    
+
+    @Inject
     public PersistentEntitySaver(
-            final Supplier<Session> session,
-            final Supplier<String> transactionGuid,
-            final Supplier<DbVersion> dbVersion,
-            final Class<T> entityType,
-            final Class<? extends Comparable<?>> keyType,
-            final Supplier<User> user,
-            final Supplier<DateTime> now,
-            final Supplier<ICompanionObjectFinder> coFinder,
-            final Supplier<QueryExecutionContext> newQueryExecutionContext,
-            final BiConsumer<T, List<String>> processAfterSaveEvent,
-            final Consumer<MetaProperty<?>> assignBeforeSave,
-            final BiFunction<Long, fetch<T>, T> findById,
-            final Function<EntityResultQueryModel<T>, Boolean> entityExists,
-            final Logger logger) {
+            @Assisted final Supplier<Session> session,
+            @Assisted final Supplier<String> transactionGuid,
+            @Assisted final Class<T> entityType,
+            @Assisted final Class<? extends Comparable<?>> keyType,
+            @Assisted final BiConsumer<T, Set<String>> processAfterSaveEvent,
+            @Assisted final Consumer<MetaProperty<?>> assignBeforeSave,
+            @Assisted final FindEntityById<T> findById,
+            @Assisted final Function<EntityResultQueryModel<T>, Boolean> entityExists,
+            @Assisted final Logger logger,
+            final IDbVersionProvider dbVersionProvider,
+            final IEntityFetcher entityFetcher,
+            final IUserProvider userProvider,
+            final IUniversalConstants universalConstants,
+            final ICompanionObjectFinder coFinder,
+            final IDomainMetadata domainMetadata)
+    {
         this.session = session;
         this.transactionGuid = transactionGuid;
-        this.dbVersion = dbVersion;
         this.entityType = entityType;
         this.keyType = keyType;
-        this.user = user;
-        this.now = now;
-        this.coFinder = coFinder;
-        this.newQueryExecutionContext = newQueryExecutionContext;
-        
         this.processAfterSaveEvent = processAfterSaveEvent;
         this.assignBeforeSave = assignBeforeSave;
-        
         this.findById = findById;
         this.entityExists = entityExists;
         this.logger = logger;
+        this.dbVersionProvider = dbVersionProvider;
+        this.entityFetcher = entityFetcher;
+        this.userProvider = userProvider;
+        this.now = universalConstants::now;
+        this.coFinder = coFinder;
+        this.domainMetadata = domainMetadata;
+    }
+
+    @ImplementedBy(FactoryImpl.class)
+    public interface IFactory {
+        <E extends AbstractEntity<?>> PersistentEntitySaver<E> create(
+                final Supplier<Session> session,
+                final Supplier<String> transactionGuid,
+                final Class<E> entityType,
+                final Class<? extends Comparable<?>> keyType,
+                final BiConsumer<E, Set<String>> processAfterSaveEvent,
+                final Consumer<MetaProperty<?>> assignBeforeSave,
+                final FindEntityById<E> findById,
+                final Function<EntityResultQueryModel<E>, Boolean> entityExists,
+                final Logger logger);
     }
     
     /**
@@ -152,8 +194,29 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
         } else if (!entity.isDirty()) {
             final Result isValid = validateEntity(entity);
             if (isValid.isSuccessful()) {
-                //logger.debug(format("Entity [%s] is not dirty (ID = %s). Saving is skipped. Entity refetched.", entity, entity.getId()));
-                return t2(entity.getId(), skipRefetching ? entity : findById.apply(entity.getId(), maybeFetch.orElseGet(() -> FetchModelReconstructor.reconstruct(entity))));
+                final T entityToReturn;
+                if (skipRefetching) {
+                    entityToReturn = entity;
+                }
+                else {
+                    final fetch<T> fetchModel = maybeFetch.orElseGet(() -> FetchModelReconstructor.reconstruct(entity));
+                    final var dm = domainMetadata.forEntity(entityType);
+                    final var plainProps = dm.properties().stream().filter(PropertyMetadata::isPlain).collect(toSet());
+                    if (plainProps.isEmpty()) {
+                        entityToReturn = findById.find(entity.getId(), fetchModel, emptyFillModel());
+                    }
+                    else {
+                        final var fillModelBld = new FillModelBuilder(domainMetadata);
+                        plainProps.stream().forEach(dmp -> {
+                            final var value = entity.get(dmp.name());
+                            if (value != null) {
+                                fillModelBld.set(dmp.name(), value);
+                            }
+                        });
+                        entityToReturn = findById.find(entity.getId(), fetchModel, fillModelBld.build(entityType));
+                    }
+                }
+                return t2(entity.getId(), entityToReturn);
             } else {
                 throw isValid;
             }
@@ -161,11 +224,20 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
 
         // logger.debug(format("Start saving entity %s (ID = %s)", entity, entity.getId())); is taking too much time for many saves
 
-        // need to capture names of dirty properties before the actual saving takes place and makes all properties not dirty
-        // this is needed for executing after save event handler
-        final List<String> dirtyProperties = entity.getDirtyProperties().stream().map(MetaProperty::getName).collect(toList());
+        // Need to capture names of dirty properties before the actual saving takes place and makes all properties not dirty.
+        // This is needed for executing after save event handler
+        // Also, collect dirty plain properties to be used for a fill model to populate those properties after saving.
+        final var dirtyPlainProps = new HashSet<MetaProperty<?>>();
+        final var entityMetadata = domainMetadata.forEntity(entity.getType());
+        final Set<String> dirtyPropNames = entity.getDirtyProperties().stream().map(mp -> {
+            final var propName = mp.getName();
+            if (entityMetadata.propertyOpt(propName).filter(PropertyMetadata::isPlain).isPresent()) {
+                dirtyPlainProps.add(mp);
+            }
+            return propName;
+        }).collect(toSet());
 
-        final T2<Long, T> result;
+        final T2<Long, T> savedEntityAndId;
         // let's try to save entity
         try {
             // firstly validate the entity
@@ -173,21 +245,46 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
             if (!isValid.isSuccessful()) {
                 throw isValid;
             }
+            final Supplier<IFillModel<T>> fillModel = () -> buildFillModel(dirtyPlainProps);
             // entity is valid, and we should proceed with saving
             // new and previously saved entities are handled differently
             if (!entity.isPersisted()) { // is it a new entity?
-                result = saveNewEntity(entity, skipRefetching, maybeFetch, session.get());
+                savedEntityAndId = saveNewEntity(entity, skipRefetching, maybeFetch, fillModel, session.get());
             } else { // so, this is a modified entity
-                result = saveModifiedEntity(entity, skipRefetching, maybeFetch, session.get());
+                savedEntityAndId = saveModifiedEntity(entity, skipRefetching, maybeFetch, fillModel, entityMetadata, session.get());
             }
         } finally {
             //logger.debug("Finished saving entity " + entity + " (ID = " + entity.getId() + ")");
         }
 
+        final T savedEntity = savedEntityAndId._2;
         // this call never throws any exceptions
-        processAfterSaveEvent.accept(result._2, dirtyProperties);
+        processAfterSaveEvent.accept(savedEntity, dirtyPropNames);
 
-        return result;
+        return savedEntityAndId;
+    }
+
+    /**
+     * Builds a {@link IFillModel} based on {@code dirtyPlainProps} for a dirty entity, before it was saved.
+     * <p>
+     * The fill model is then used to restore values for dirty plain properties and reset their meta-state,
+     * so that they are not dirty in the returned saved instance.
+     *
+     * @param dirtyPlainProps
+     * @return
+     */
+    private IFillModel<T> buildFillModel(final Set<MetaProperty<?>> dirtyPlainProps) {
+        if (dirtyPlainProps.isEmpty()) {
+            return emptyFillModel();
+        }
+        final FillModelBuilder builder = new FillModelBuilder(domainMetadata);
+        for (final MetaProperty<?> mp : dirtyPlainProps) {
+            final var value = mp.getValue();
+            if (value != null) {
+                builder.set(mp.getName(), value);
+            }
+        }
+        return builder.build(entityType);
     }
 
     /**
@@ -215,7 +312,7 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
         if (!props.isEmpty()) {
             for (final MetaProperty<?> prop : props) {
                 if (prop.getValue() == null) {
-                    throw new EntityCompanionException(format("Property %s@%s is marked as assignable before save, but had its value removed.", prop.getName(), entity.getType().getName()));
+                    throw new EntityCompanionException("Property %s@%s is marked as assignable before save, but had its value removed.".formatted(prop.getName(), entity.getType().getName()));
                 }
             }
         }
@@ -224,22 +321,30 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
     /**
      * Saves previously persisted and now modified entity.
      *
-     * @param entity
-     * @param skipRefetching
-     * @param maybeFetch
-     * @param session
+     * @param entity  an entity instance being saved
+     * @param skipRefetching  instructs whether re-fetching should be skipped
+     * @param maybeFetch  fetch model to apply to an entity instance after saving
+     * @param fillModel  will be applied only in the presence of a fetch model
+     * @param entityMetadata  entity domain metadata
+     * @param session  the current database session
      */
-    private T2<Long, T> saveModifiedEntity(final T entity, final boolean skipRefetching, final Optional<fetch<T>> maybeFetch, final Session session) {
+    private T2<Long, T> saveModifiedEntity(
+            final T entity,
+            final boolean skipRefetching,
+            final Optional<fetch<T>> maybeFetch,
+            final Supplier<IFillModel<T>> fillModel,
+            final EntityMetadata entityMetadata,
+            final Session session)
+    {
         // let's first prevent not permissibly modifications that could not be checked any earlier than this,
         // which pertain to required and marked as assign before save properties that must have values
         checkDirtyMarkedForAssignmentBeforeSaveProperties(entity);
         // let's make sure that entity is not a duplicate
-        final AggregatedResultQueryModel model = select(createQueryByKey(dbVersion.get(), entityType, keyType, false, entity.getKey())).yield().prop(AbstractEntity.ID).as(AbstractEntity.ID).modelAsAggregate();
-        final QueryExecutionContext queryExecutionContext = newQueryExecutionContext.get();
-        final List<EntityAggregates> ids = new EntityFetcher(queryExecutionContext).getEntities(from(model).lightweight().model());
+        final var model = select(createQueryByKey(dbVersionProvider.dbVersion(), entityType, keyType, false, entity.getKey())).yield().prop(AbstractEntity.ID).as(AbstractEntity.ID).modelAsAggregate();
+        final var ids = entityFetcher.getEntities(session, from(model).lightweight().model());
         final int count = ids.size();
-        if (count == 1 && entity.getId().longValue() != ((Number) ids.get(0).get(AbstractEntity.ID)).longValue()) {
-            throw new EntityAlreadyExists("%s [%s] already exists.".formatted(getEntityTitleAndDesc(entity.getType()).getKey(), entity));
+        if (count == 1 && entity.getId().longValue() != ((Number) ids.getFirst().get(AbstractEntity.ID)).longValue()) {
+            throw new EntityAlreadyExists(ERR_ALREADY_EXISTS.formatted(getEntityTitleAndDesc(entity.getType()).getKey(), entity));
         }
 
         // load the entity directly from the session
@@ -250,31 +355,60 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
             throw new EntityCompanionException(format("%s %s [%s] could not be saved.", ERR_COULD_NOT_RESOLVE_CONFLICTING_CHANGES, getEntityTitleAndDesc(entityType).getKey(), entity));
         }
 
+        // From this point on, until `session.flush()`, if the persisted version of `entity` is modified
+        // (i.e., `persistedEntity.version` is no longer the actual persisted version),
+        // then `session.flush()` will fail with StaleObjectException.
+        // This may happen if and only if there is a concurrent update to the entity during this interval.
+
         // reconstruct entity fetch model for future retrieval at the end of the method call
         final Optional<fetch<T>> entityFetchOption = skipRefetching ? empty() : (maybeFetch.isPresent() ? maybeFetch : of(FetchModelReconstructor.reconstruct(entity)));
 
-        // proceed with property assignment from entity to persistent entity, which in case of a resolvable conflict acts like a fetch/rebase in git
-        // it is essential that if a property is of an entity type it should be re-associated with the current session before being set
-        // the easiest way to do that is to load entity by id using the current session
-        for (final MetaProperty<?> prop : entity.getDirtyProperties()) {
-            final Object value = prop.getValue();
-            if (shouldProcessAsActivatable(entity, prop)) {
-                handleDirtyActivatableProperty(entity, persistedEntity, prop, value, session);
-            } else if (value instanceof AbstractEntity && !(value instanceof PropertyDescriptor) && !(value instanceof AbstractUnionEntity)) {
-                persistedEntity.set(prop.getName(), session.load(((AbstractEntity<?>) value).getType(), ((AbstractEntity<?>) value).getId()));
-            } else {
-                persistedEntity.set(prop.getName(), value);
-            }
-        } // end of processing dirty properties
+        // Need to record the persisted active status before `persistedEntity` is modified to support processing of deactivatable dependencies.
+        final Optional<Boolean> persistedIsActive = entity instanceof ActivatableAbstractEntity ? optional(persistedEntity.get(ACTIVE)) : empty();
 
-        // handle ref counts of non-dirty activatable properties
-        if (entity instanceof ActivatableAbstractEntity) {
-            handleNonDirtyActivatableIfNecessary(entity, persistedEntity, session);
+        // Perform reference counting in case entity is activatable.
+        refCountInstructions(entity, persistedEntity, session).forEach(ins -> execute(ins, session));
+
+        // Proceed with property assignment from entity to persistent entity, which in case of a resolvable conflict acts like a fetch/rebase in Git.
+        for (final var prop : entity.getDirtyProperties()) {
+            // Set of meta-properties and set of properties with metadata may be different, but persistent properties
+            // must always be present in both sets.
+            final var maybePropMetadata = entityMetadata.property(prop).orElseThrow(Function.identity());
+            if (maybePropMetadata.filter(PropertyMetadata::isPersistent).isPresent()) {
+                final Object value = prop.getValue();
+                // If a property is of an entity type, it should be re-associated with the current session before being set.
+                // TODO Is this still true?
+                if (value instanceof AbstractEntity<?> valueAsEntity && !(value instanceof PropertyDescriptor) && !(value instanceof AbstractUnionEntity)) {
+                    persistedEntity.set(prop.getName(), session.load(valueAsEntity.getType(), valueAsEntity.getId()));
+                }
+                else {
+                    persistedEntity.set(prop.getName(), value);
+                }
+            }
+        }
+
+        // Deactivatable dependencies should be processed after property changes have been assigned to `persistedEntity`,
+        // as this will reflect the property changes in the persisted state of `entity` that could be read during saving of deactivatable dependencies.
+        try {
+            processDeactivatableDependencies(entity, persistedIsActive.orElse(false));
+        } catch (final StaleStateException | OptimisticLockException | EntityWasUpdatedOrDeletedConcurrently ex) {
+            // These exceptions occur when processing deactivatable dependencies encounters concurrent modifications.
+            // Since processDeactivatableDependencies recursively saves dependent entities via co.save(),
+            // each save operation may conflict with concurrent transactions modifying the same entities.
+            //
+            // Possible scenarios:
+            // - StaleStateException: Hibernate detects unexpected row counts during batch operations
+            //   (e.g., expected to update 1 row but updated 0 due to concurrent deletion)
+            // - OptimisticLockException: Version mismatch detected during entity update
+            // - EntityWasUpdatedOrDeletedConcurrently: TG's wrapped optimistic lock exception from recursive saves
+            //
+            // All these exceptions indicate the same user-facing issue: concurrent modification of related data.
+            throw new EntityCompanionException(ERR_CONFLICTING_CONCURRENT_CHANGE, ex);
         }
 
         // perform meta-data assignment to capture the information about this modification
-        if (entity instanceof AbstractPersistentEntity) {
-            assignLastModificationInfo((AbstractPersistentEntity<?>) entity, (AbstractPersistentEntity<?>) persistedEntity);
+        if (entity instanceof AbstractPersistentEntity<?> entityAsPersistent) {
+            assignLastModificationInfo(entityAsPersistent, (AbstractPersistentEntity<?>) persistedEntity);
         }
 
         // update entity
@@ -288,175 +422,79 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
             logger.error(msg, ex);
             throw new EntityWasUpdatedOrDeletedConcurrently(msg, ex);
         } finally {
-            session.clear();
+            // We can only clear a session if the transaction is active. Otherwise, an exception is thrown.
+            // However, we cannot simply check session.getTransaction().isActive() because Hibernate considers active transactions that are going to be rolled back.
+            // And at the same time, Hibernate does not permit clearing a session for transactions that are marked to be rolled back.
+            // Hence, the need to check transaction status directly.
+            if (session.getTransaction().getStatus() == TransactionStatus.ACTIVE) {
+                session.clear();
+            }
         }
 
-        return t2(persistedEntity.getId(), entityFetchOption.map(fetch -> findById.apply(persistedEntity.getId(), fetch)).orElse(persistedEntity));
+        return t2(persistedEntity.getId(),
+                  entityFetchOption.map(fetch -> findById.find(persistedEntity.getId(), fetch, fillModel.get())).orElse(persistedEntity));
     }
 
-    /**
-     * Handles dirty activatable property in a special way that manages refCount of its current and previous values, but only if the entity being saving is an activatable that does
-     * not fall into the category of those with type that governs deactivatable dependency of the entity being saved.
-     *
-     * @param entity
-     * @param persistedEntity
-     * @param prop
-     * @param value
-     * @param session
-     */
-    private void handleDirtyActivatableProperty(final T entity, final T persistedEntity, final MetaProperty<?> prop, final Object value, final Session session) {
-        final String propName = prop.getName();
-        // dirty activatable handling only needs to be performed if the current and persisted values are different
-        // at this stage of program execution, these values can only be the same iff a concurrent modification to the same value took place (i.e. non-conflicting concurrent change)
-        // in such case recalculation of refCount for respective entities has already been performed, and double-dipping should be avoided
-        if (equalsEx(value, persistedEntity.get(propName))) {
-            return;
-        }
-        // if value is null then an activatable entity has been dereferenced and its refCount needs to be decremented
-        // but only if the dereferenced value is an active activatable and the entity being saved is not being made active -- thus previously it was not counted as a reference
-        if (value == null) {
-            final MetaProperty<Boolean> activeProp = entity.getProperty(ACTIVE);
-            final boolean beingActivated = activeProp.isDirty() && activeProp.getValue();
-            // get the latest value of the dereferenced activatable as the current value of the persisted entity version from the database and decrement its ref count
-            // original property value should not be null, otherwise property would not become dirty by assigning null
-            final ActivatableAbstractEntity<?> origValue = (ActivatableAbstractEntity<?>) entity.getProperty(propName).getOriginalValue();
-            final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), origValue.getId(), UPGRADE);
-            // if persistedValue active and does not equal to the entity being saving then need to decrement its refCount
-            if (!beingActivated && persistedValue.isActive() && !areEqual(entity, persistedValue)) { // avoid counting self-references
-                persistedValue.setIgnoreEditableState(true);
-                session.update(persistedValue.decRefCount());
-            }
-
-            // assign null as the property value to actually dereference activatable
-            persistedEntity.set(propName, null);
-        } else { // otherwise there could be either referencing (i.e. before property was null) or a reference change (i.e. from one value to some other)
-            // need to process previous property value
-            final AbstractEntity<?> origValue = (ActivatableAbstractEntity<?>) entity.getProperty(propName).getOriginalValue();
-            if (origValue != null && !areEqual(entity, origValue)) { // need to decrement refCount for the dereferenced entity, but avoid counting self-references
-                final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), origValue.getId(), UPGRADE);
-                persistedValue.setIgnoreEditableState(true);
-                session.update(persistedValue.decRefCount());
-            }
-            // also need increment refCount for a newly referenced activatable
-            final ActivatableAbstractEntity<?> persistedValue = (ActivatableAbstractEntity<?>) session.load(prop.getType(), ((AbstractEntity<?>) value).getId(), UPGRADE);
-            if (!areEqual(entity, persistedValue)) { // avoid counting self-references
-                // now let's check if the entity itself is an active activatable
-                // as this influences the decision to increment refCount for the newly referenced activatable
-                // because, if it's not then there is no reason to increment refCout for the referenced instance
-                // in other words, inactive entity does not count as an active referencer
-                if (entity.<Boolean>get(ACTIVE)) {
-                    persistedValue.setIgnoreEditableState(true);
-                    session.update(persistedValue.incRefCount());
-                }
-            }
-
-            // assign updated activatable as the property value
-            persistedEntity.set(propName, persistedValue);
+    /// If `entity` was deactivated, deactivates its [deactivatable dependencies][DeactivatableDependencies].
+    ///
+    private <E extends AbstractEntity<?>> void processDeactivatableDependencies(final E entity, final boolean persistedIsActive) {
+        if (entity instanceof ActivatableAbstractEntity<?> activatable) {
+            processDeactivatableDependencies_(activatable, persistedIsActive);
         }
     }
 
-    /**
-     * In case entity is activatable and has just been activated or deactivated, it is also necessary to make sure that all previously referenced activatables, which did not fall
-     * into the dirty category and are active get their refCount increment or decremented accordingly
-     *
-     * @param entity
-     * @param persistedEntity
-     * @param session
-     */
-    private void handleNonDirtyActivatableIfNecessary(final T entity, final T persistedEntity, final Session session) {
-        final MetaProperty<Boolean> activeProp = entity.getProperty(ACTIVE);
-        // was activatable entity just activated?
-        if (activeProp.isDirty()) {
-            // let's collect activatable not dirty properties from entity to check them for activity and also to increment their refCount
-            final Set<String> keyMembers = Finder.getKeyMembers(entity.getType()).stream().map(Field::getName).collect(Collectors.toSet());
-            for (final T2<String, Class<ActivatableAbstractEntity<?>>> propNameAndType : collectActivatableNotDirtyProperties(entity, keyMembers)) {
-                // get value from a persisted version of entity, which is loaded by Hibernate
-                // if a corresponding property is proxied due to insufficient fetch model, its value is retrieved lazily by Hibernate
-                final AbstractEntity<?> value = persistedEntity.get(propNameAndType._1);
-                if (value != null) { // if there is actually some value
-                    // load activatable value
-                    final ActivatableAbstractEntity<?> persistedValue = session.load(propNameAndType._2, value.getId(), UPGRADE);
-                    persistedValue.setIgnoreEditableState(true);
-                    // if activatable property value is not a self-reference
-                    // then need to check if it is active and if so increment its refCount
-                    // otherwise, if activatable is not active then we've got an erroneous situation that should prevent activation of entity
-                    if (!areEqual(entity, persistedValue)) {
-                        if (activeProp.getValue()) { // is entity being activated?
-                            if (!persistedValue.isActive()) { // if activatable is not active then this is an error
-                                final String entityTitle = getEntityTitleAndDesc(entity.getType()).getKey();
-                                final String persistedValueTitle = getEntityTitleAndDesc(propNameAndType._2).getKey();
-                                throw new EntityCompanionException(format("%s [%s] has a reference to already inactive %s [%s].", entityTitle, entity, persistedValueTitle, persistedValue));
-                            } else { // otherwise, increment refCount
-                                session.update(persistedValue.incRefCount());
-                            }
-                        } else if (persistedValue.isActive()) { // is entity being deactivated, but is referencing an active activatable?
-                            session.update(persistedValue.decRefCount());
-                        }
-                    }
-                }
-            }
-
-            // separately need to perform deactivation of deactivatable dependencies in case where the entity being saved is deactivated
-            if (!activeProp.getValue()) {
-                final List<? extends ActivatableAbstractEntity<?>> deactivatables = findActiveDeactivatableDependencies((ActivatableAbstractEntity<?>) entity, coFinder.get());
-                for (final ActivatableAbstractEntity<?> deactivatable : deactivatables) {
-                    deactivatable.set(ACTIVE, false);
-                    final Result result = deactivatable.isValid();
-                    if (result.isSuccessful()) {
-                        // persisting of deactivatables should go through the logic of companion save
-                        // and cannot be persisted by just using a call to Hibernate Session
-                        final CommonEntityDao co = coFinder.get().find(deactivatable.getType());
-                        co.save(deactivatable);
-                    } else {
-                        throw result;
-                    }
-                }
+    @SuppressWarnings("unchecked")
+    private <E extends ActivatableAbstractEntity<?>> void processDeactivatableDependencies_(final E entity, final boolean persistedIsActive) {
+        if (!entity.isActive() && entity.isActive() != persistedIsActive) {
+            for (final ActivatableAbstractEntity<?> deactivatable : findActiveDeactivatableDependencies((ActivatableAbstractEntity<?>) entity, coFinder)) {
+                deactivatable.set(ACTIVE, false);
+                deactivatable.isValid().ifFailure(Result::throwRuntime);
+                // Persisting of deactivatables should go through the logic of companion save, they cannot be persisted through Hibernate Session directly.
+                final IEntityDao co = coFinder.find(deactivatable.getType());
+                co.save(deactivatable);
             }
         }
     }
 
-    /**
-     * This is a convenient predicate method that identifies whether the specified property need to be processed as an activatable reference.
-     *
-     * @param entity
-     * @param prop
-     * @return
-     */
-    private boolean shouldProcessAsActivatable(final T entity, final MetaProperty<?> prop) {
-        final boolean shouldProcessAsActivatable;
-        if (prop.isActivatable() && entity instanceof ActivatableAbstractEntity && isNotSpecialActivatableToBeSkipped(prop)) {
-            final Class<? extends ActivatableAbstractEntity<?>> type = (Class<? extends ActivatableAbstractEntity<?>>) prop.getType();
-            final DeactivatableDependencies ddAnnotation = type.getAnnotation(DeactivatableDependencies.class);
-            if (ddAnnotation != null && prop.isKey()) {
-                shouldProcessAsActivatable = !Arrays.asList(ddAnnotation.value()).contains(entity.getType());
-            } else {
-                shouldProcessAsActivatable = true;
-            }
-        } else {
-            shouldProcessAsActivatable = false;
-        }
-        return shouldProcessAsActivatable;
+    private static @Nullable ActivatableAbstractEntity<?> extractActivatable(final AbstractEntity<?> entity) {
+        return switch (entity) {
+            case ActivatableAbstractEntity<?> it -> it;
+            case AbstractUnionEntity union -> union.activeEntity() instanceof ActivatableAbstractEntity<?> it ? it : null;
+            case null, default -> null;
+        };
     }
 
-    /**
-     * Determines whether automatic conflict resolves between the two entity instance is possible. The ability to resolve conflict automatically is based strictly on dirty
-     * properties -- if dirty properties in <code>entity</code> are equals to the same properties in <code>persistedEntity</code> then the conflict can be resolved.
-     *
-     * @param entity
-     * @param persistedEntity
-     * @return
-     */
+    /// Determines whether automatic conflict resolution between two entities of the same type is possible.
+    /// This predicate is `true` iff all dirty properties of `entity` support automatic conflict resolution,
+    /// and the value of each such property does not conflict with the same property of `persistedEntity`.
+    /// The meaning of "conflict" has one common and one special case:
+    /// 1. *Common case:* [EntityUtils#isConflicting] is used to identify a conflict for all properties and entities except property `active` for an activatable entity.
+    /// 2. *Special case:* property `active` for an activatable entity is compared directly with the value of `active` in `persistentEntity`, and only if the dirty value is `false`.
+    ///    This is required to avoid situations where an entity is being deactivated, and someone is creating an active reference to that instance concurrently.
+    ///    Additionally, the condition `persistedEntity.refCount != 0` ensures that deactivation of a stale instance does not fail solely because the `entity` is stale.
+    ///
+    /// @see MapEntityTo#autoConflictResolution()
+    /// @see MapTo#autoConflictResolution()
+    ///
     private boolean canResolveConflict(final T entity, final T persistedEntity) {
-        if (!AnnotationReflector.getAnnotation(entity.getClass(), MapEntityTo.class).autoConflictResolution()) {
+        if (!requireNonNull(AnnotationReflector.getAnnotation(entity.getClass(), MapEntityTo.class)).autoConflictResolution()) {
             return false;
         }
-        // comparison of property values is most likely to trigger lazy loading
+        // Comparison of property values is most likely to trigger lazy loading if `persistedEntity` is a Hibernate proxy
         for (final MetaProperty<?> prop : entity.getDirtyProperties()) {
             final String name = prop.getName();
+            final MapTo mapTo = AnnotationReflector.getPropertyAnnotation(MapTo.class, entity.getType(), name);
+            if (mapTo != null && !mapTo.autoConflictResolution()) {
+                return false;
+            }
             final Object oldValue = prop.getOriginalValue();
             final Object newValue = prop.getValue();
             final Object persistedValue = persistedEntity.get(name);
-            if (EntityUtils.isConflicting(newValue, oldValue, persistedValue)) {
+            if (EntityUtils.isConflicting(newValue, oldValue, persistedValue) ||
+                entity instanceof ActivatableAbstractEntity<?> && prop.getName().equals(ACTIVE) &&
+                Boolean.FALSE.equals(newValue) && Boolean.TRUE.equals(persistedValue) &&
+                Integer.valueOf(0).compareTo(persistedEntity.get(REF_COUNT)) != 0)
+            {
                 return false;
             }
         }
@@ -465,167 +503,357 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
     }
 
     /**
-     * Persists an entity that was not persisted before. Self-references are not possible for new entities simply because non-persisted instances are not permitted as property
-     * values. Unless there is a special case of skipping entity exists validation, but then the developer would need to take case of that somehow specifically for each specific
-     * case.
+     * Persists an entity not persisted before.
+     * Self-references are not possible for new entities simply because non-persisted instances are not permitted as property values.
+     * Unless there is a special case of skipping entity exists validation, but then the developer would need to take care of that somehow specifically for each case.
      *
-     * @param entity
-     * @param skipRefetching
-     * @param maybeFetch
-     * @param session
+     * @param entity  an entity instance being saved for the first time
+     * @param skipRefetching  instructs whether re-fetching should be skipped
+     * @param maybeFetch  fetch model to apply to an entity instance after saving
+     * @param fillModel  will be applied only in the presence of a fetch model
+     * @param session  the current database session
      */
-    private T2<Long, T> saveNewEntity(final T entity, final boolean skipRefetching, final Optional<fetch<T>> maybeFetch, final Session session) {
-        // let's make sure that entity is not a duplicate
-        if (entityExists.apply(createQueryByKey(dbVersion.get(), entityType, keyType, false, entity.getKey()))) {
-            throw new EntityAlreadyExists(format("%s [%s] already exists.", getEntityTitleAndDesc(entity.getType()).getKey(), entity));
+    private T2<Long, T> saveNewEntity(
+            final T entity,
+            final boolean skipRefetching,
+            final Optional<fetch<T>> maybeFetch,
+            final Supplier<IFillModel<T>> fillModel,
+            final Session session)
+    {
+        // Make sure that entity is not a duplicate.
+        if (entityExists.apply(createQueryByKey(dbVersionProvider.dbVersion(), entityType, keyType, false, entity.getKey()))) {
+            throw new EntityAlreadyExists(format(ERR_ALREADY_EXISTS, getEntityTitleAndDesc(entity.getType()).getKey(), entity));
         }
 
-        // process transactional assignments
+        // Process transactional assignments.
         if (entity instanceof AbstractPersistentEntity) {
-            assignCreationInfo((AbstractPersistentEntity<?>) entity);
+            assignCreationInfoForNew((AbstractPersistentEntity<?>) entity);
         }
-        assignPropertiesBeforeSave(entity);
+        assignPropsBeforeSaveForNew(entity);
 
-        // reconstruct entity fetch model for future retrieval at the end of the method call
+        // Reconstruct entity fetch model for future retrieval at the end of the method call.
         final Optional<fetch<T>> entityFetchOption = skipRefetching ? empty() : (maybeFetch.isPresent() ? maybeFetch : of(FetchModelReconstructor.reconstruct(entity)));
 
-        // new entity might be activatable, but this has no effect on its refCount -- should be zero as no other entity could yet reference it
-        // however, it might reference other activatable entities, which warrants update to their refCount.
-        final boolean shouldProcessActivatableProperties;
-        if (entity instanceof ActivatableAbstractEntity) {
-            final ActivatableAbstractEntity<?> activatable = (ActivatableAbstractEntity<?>) entity;
-            shouldProcessActivatableProperties = activatable.isActive();
-        } else { // refCount should not be updated if referenced by non-activatable
-            shouldProcessActivatableProperties = false; // setting true would enable refCount update in case of saving non-activatable
-        }
+        // New entity might be activatable, but this has no effect on its `refCount` -- should be zero as no other entity could yet reference it.
+        // However, this entity might reference other activatables, which warrants update to their `refCount`.
+        refCountInstructions(entity, session).forEach(ins -> execute(ins, session));
 
-        if (shouldProcessActivatableProperties) {
-            final Set<String> keyMembers = Finder.getKeyMembers(entity.getType()).stream().map(Field::getName).collect(toSet());
-            final Set<MetaProperty<? extends ActivatableAbstractEntity<?>>> activatableDirtyProperties = collectActivatableDirtyProperties(entity, keyMembers);
-
-            for (final MetaProperty prop : activatableDirtyProperties) {
-                if (prop.getValue() != null) {
-                    // need to update refCount for the activatable entity
-                    final ActivatableAbstractEntity<?> value = (ActivatableAbstractEntity<?>) prop.getValue();
-                    final ActivatableAbstractEntity<?>  persistedEntity = (ActivatableAbstractEntity<?> ) session.load(value.getType(), value.getId(), UPGRADE);
-                    // the returned value could already be inactive due to some concurrent modification
-                    // therefore it is critical to ensure that the property of the current entity being saved can still accept the obtained value if it is inactive
-                    if (!persistedEntity.isActive()) {
-                        prop.setValue(persistedEntity, true);
-
-                        final Result res = prop.getFirstFailure();
-                        if (res != null) {
-                            session.detach(persistedEntity);
-                            // the last invalid value would now be set to persistedEntity, which is proxied by Hibernate and cannot be serialised
-                            // this is why we need to reset the last invalid value to the re-fetched value, which is effectively being revalidated
-                            final IEntityDao co = coFinder.get().find(value.getType(), true /* uninstrumented */);
-                            final ActivatableAbstractEntity<?> refetchedValue = (ActivatableAbstractEntity<?>) co.findById(value.getId(), FetchModelReconstructor.reconstruct(value));
-                            prop.setLastInvalidValue(refetchedValue);
-                            throw res;
-                        }
-                    }
-                    persistedEntity.setIgnoreEditableState(true);
-                    session.update(persistedEntity.incRefCount());
-                }
-            }
-        }
-
-        // depending on whether the current entity represents a one-2-one association or not, it may require a new ID
-        // in case of one-2-one association the value of ID is derived from its key's ID and does not need to be generated
+        // Depending on whether the current entity represents a one-2-one association or not, it may require a new ID.
+        // In the case of one-2-one association, the value of ID is derived from its key's ID and does not need to be generated.
         final boolean isOne2OneAssociation = AbstractEntity.class.isAssignableFrom(entity.getKeyType());
         final Long newEntityId = isOne2OneAssociation ? ((AbstractEntity<?>) entity.getKey()).getId() : nextIdValue(ID_SEQUENCE_NAME, session);
         try {
-            final AbstractEntity<?> entityToSave = isOne2OneAssociation ? entity : entity.set(ID, newEntityId);
+            final var entityToSave = isOne2OneAssociation ? entity : entity.set(ID, newEntityId);
             session.save(entityToSave);
             session.flush(); // force saving to DB
             session.clear();
         } finally {
-            // reset the value of ID to null for the passed-in entity to avoid any possible confusion stemming from the fact that entity became "persisted"
-            // this is relevant for all entities, including one-2-one associations
+            // Reset the value of ID to null for the passed-in entity to avoid any possible confusion stemming from the fact that `entity` became persisted.
+            // This is relevant for all entities, including one-2-one associations.
             entity.set(ID, null);
         }
         
-        return t2(newEntityId, entityFetchOption.map(fetch -> findById.apply(newEntityId, fetch)).orElse(entity));
+        return t2(newEntityId,
+                  entityFetchOption.map(fetch -> findById.find(newEntityId, fetch, fillModel.get())).orElse(entity));
     }
 
-    /**
-     * Collects properties that represent dirty activatable entities that should have their ref counts updated.
-     *
-     * @param entity
-     * @return
-     */
-    private Set<MetaProperty<? extends ActivatableAbstractEntity<?>>> collectActivatableDirtyProperties(final T entity, final Set<String> keyMembers) {
-        final Set<MetaProperty<? extends ActivatableAbstractEntity<?>>> result = new HashSet<>();
-        for (final MetaProperty<?> prop : entity.getProperties().values()) {
-            if (prop.isDirty() && prop.isActivatable() && isNotSpecialActivatableToBeSkipped(prop)) {
-                addToResultIfApplicableFromActivatablePerspective(entity, keyMembers, result, prop);
+    /// Creates and collates instructions for modifying `refCount` of activatable references in modified activatable `entity`.
+    ///
+    /// @param entity           a potentially activatable entity being saved; if is not activatable, an empty stream is returned.
+    /// @param persistedEntity  a persisted version of `entity` (i.e., its Hibernate proxy).
+    ///
+    private <E extends AbstractEntity<?>>
+    Stream<RefCountInstruction> refCountInstructions(final E entity, final E persistedEntity, final Session session) {
+        return entity instanceof ActivatableAbstractEntity<?> activatable
+                ? refCountInstructions_(activatable, (ActivatableAbstractEntity<?>) persistedEntity, session)
+                : Stream.of();
+    }
+
+    /// Creates and collates instructions for modifying `refCount` of activatable references in new activatable `entity`.
+    ///
+    /// @param entity a potentially activatable entity being saved; if is not activatable or not active, an empty stream is returned.
+    ///
+    private <E extends AbstractEntity<?>>
+    Stream<RefCountInstruction> refCountInstructions(final E entity, final Session session) {
+        return entity instanceof ActivatableAbstractEntity<?> activatable && activatable.isActive()
+                ? refCountInstructions_(activatable, null, session)
+                : Stream.of();
+    }
+
+    /// The actual implementation for creating instructions to increment and decrement `refCount` property for activatable references in activatable `entity`.
+    ///
+    /// @param entity  an activatable entity; a typecasting runtime exception would get thrown if `entity` is not activatable.
+    /// @param persistedEntity a `null` for new `entity` or a Hibernate proxy loaded for persisted `entity`.
+    /// @param session  the current Hibernate session for locking and updating `refCount` for the referenced activatable entities.
+    ///
+    @SuppressWarnings("unchecked")
+    private <E extends ActivatableAbstractEntity<?>>
+    Stream<RefCountInstruction> refCountInstructions_(final E entity, final @Nullable E persistedEntity, final Session session) {
+        final var entityType = (Class<? extends ActivatableAbstractEntity<?>>) entity.getType();
+
+        // If `entity` is persisted and active, process activatables among its non-dirty properties.
+        //
+        // Under ordinary conditions, where no concurrent modifications take place:
+        // * If `entity` was deactivated, `refCount`s are decremented.
+        // * If `entity` was activated, `refCount`s are incremented.
+        //
+        // If `entity` was concurrently modified, these actions will be taken iff the persisted active status is
+        // different from the active status in `entity`.
+        // Otherwise, if persisted active status matches that of `entity`, no action needs to be taken as all that work
+        // would have already been done during the concurrent modification.
+        final Stream<RefCountInstruction> instructionsForNonDirty;
+        if (persistedEntity != null && entity.getProperty(ACTIVE).isDirty() && entity.isActive() != persistedEntity.isActive()) {
+            instructionsForNonDirty = entity.getProperties().values()
+                    .stream()
+                    .filter(mp -> mp.isProxy() || !mp.isDirty())
+                    .<RefCountInstruction>map(mp -> {
+                        final var propName = mp.getName();
+                        if (isActivatableReference(entityType, propName, persistedEntity.get(propName), coFinder)) {
+                            // If the property is proxied, its value will be retrieved lazily by Hibernate.
+                            final var activatableValue = extractActivatable(persistedEntity.get(propName));
+                            if (activatableValue != null) {
+                                final var persistedActivatableValue = (ActivatableAbstractEntity<?>) session.load(activatableValue.getType(), activatableValue.getId(), UPGRADE);
+                                persistedActivatableValue.setIgnoreEditableState(true);
+                                // Update `refCount` if the referenced entity is active and is not a self-reference.
+                                if (!areEqual(entity, persistedActivatableValue)) {
+                                    // If the entity being saved is active and references an inactive entity, then we have an erroneous situation
+                                    // and should prevent the activation of the entity being saved.
+                                    if (entity.isActive()) {
+                                        if (!persistedActivatableValue.isActive()) {
+                                            session.detach(persistedActivatableValue);
+                                            // This property may be proxied, thus we cannot use `mkInactiveReferenceFailure`.
+                                            throw new EntityCompanionException(ERR_INACTIVE_REFERENCES.formatted(
+                                                    getTitleAndDesc(propName, entityType).getKey(),
+                                                    getEntityTitleAndDesc(entityType).getKey(),
+                                                    entity,
+                                                    getEntityTitleAndDesc(persistedActivatableValue).getKey(),
+                                                    persistedActivatableValue));
+                                        }
+                                        else {
+                                            return new RefCountInstruction.Inc(persistedActivatableValue);
+                                        }
+                                    }
+                                    else if (persistedActivatableValue.isActive()) {
+                                        return new RefCountInstruction.Dec(persistedActivatableValue);
+                                    }
+                                    else {
+                                        session.detach(persistedActivatableValue);
+                                    }
+                                }
+                                else {
+                                    session.detach(persistedActivatableValue);
+                                }
+                            }
+                        }
+                        return null;
+                    })
+                    .filter(Objects::nonNull);
+        }
+        else {
+            instructionsForNonDirty = Stream.of();
+        }
+
+        // If the persisted version of `entity` is active, then any active entity it references must have had its `refCount` incremented.
+        // Otherwise, the persisted version of `entity` is inactive and any active entity it references must have either had
+        // its `refCount` decremented or its `refCount` was not changed at all (if it was referenced after deactivation of `entity`).
+
+        final var wasConcurrentlyModified = persistedEntity != null && persistedEntity.getVersion() > entity.getVersion();
+        final var willBeActive = (persistedEntity == null || entity.getProperty(ACTIVE).isDirty()) ? entity.isActive() : persistedEntity.isActive();
+
+        final Stream<RefCountInstruction> instructionsForDirty = entity.getDirtyProperties()
+                .stream()
+                .filter(prop -> isEntityType(prop.getType()))
+                .map(prop -> (MetaProperty<AbstractEntity<?>>) prop)
+                .mapMulti((prop, sink) -> {
+                    // Process the original property value, which makes sense only for persisted entities.
+                    // `refCount` must be decremented if it was incremented previously AND was not decremented by a concurrent modification.
+                    if (persistedEntity != null
+                        && prop.getOriginalValue() != null
+                        && (wasConcurrentlyModified
+                            // In case of a concurrent modification, we decrement `refCount` iff `persistedEntity` is still active
+                            // and references the original value.
+                            ? (persistedEntity.isActive() && prop.getOriginalValue().equals(persistedEntity.get(prop.getName())))
+                            // Proceed if `refCount` for the original value was incremented previously.
+                            : persistedEntity.isActive())
+                        && isActivatableReference(entityType, prop.getName(), prop.getOriginalValue(), coFinder))
+                    {
+                        // `refCount` is decremented iff:
+                        // * the persisted version of the original value is active;
+                        // * AND the original value is not a self-reference to `entity`.
+                        final var originalActivatableValue = extractActivatable(prop.getOriginalValue());
+                        if (originalActivatableValue != null) {
+                            final var persistedOriginalValue = (ActivatableAbstractEntity<?>) session.load(originalActivatableValue.getType(), originalActivatableValue.getId(), UPGRADE);
+                            if (persistedOriginalValue.isActive() && !areEqual(entity, persistedOriginalValue)) {
+                                sink.accept(new RefCountInstruction.Dec(originalActivatableValue));
+                            }
+                        }
+                    }
+
+                    // For the new value, `refCount` must be incremented if the result of saving `entity` is an active entity
+                    // AND the new value's `refCount` was not incremented already by a concurrent assignment.
+                    if (willBeActive
+                        && prop.getValue() != null
+                        && (!wasConcurrentlyModified || !(persistedEntity.isActive() && prop.getValue().equals(persistedEntity.get(prop.getName()))))
+                        && isActivatableReference(entityType, prop.getName(), prop.getValue(), coFinder))
+                    {
+                        final var activatableValue = extractActivatable(prop.getValue());
+                        // `entity` began referencing `activatableValue`.
+                        if (activatableValue != null) {
+                            // The use of `UPGRADE` is not strictly required for safe concurrent updates to `refCount`.
+                            // However, with `UPGRADE`, `session.load()` acquires a pessimistic lock on the record,
+                            // blocking other transactions from modifying it until the current transaction completes (commit or rollback).
+                            // This guarantees that `session.load()` returns the most up-to-date persisted state.
+                            //
+                            // Without `UPGRADE`, multiple transactions can call `session.load()` concurrently without blocking.
+                            // In this case, the first transaction to commit successfully updates the persistent state,
+                            // while any concurrent transaction attempting to commit a conflicting change will fail with a `StaleObjectException`.
+                            //
+                            // Summary:
+                            // * With `UPGRADE`: safe concurrent updates with blocking (pessimistic locking).
+                            // * Without `UPGRADE`: safe concurrent updates without blocking (optimistic locking), but with a risk of rollback on conflict.
+                            //
+                            // We prefer using `UPGRADE` in this context to reduce the likelihood of rollbacks in potentially complex transactions caused by concurrent updates to `refCount`.
+                            final var persistedActivatableValue = (ActivatableAbstractEntity<?>) session.load(activatableValue.getType(), activatableValue.getId(), UPGRADE);
+
+                            // Ignore self-references.
+                            if (!areEqual(entity, persistedActivatableValue)) {
+                                if (!persistedActivatableValue.isActive()) {
+                                    session.detach(persistedActivatableValue);
+                                    throw mkInactiveReferenceFailure(prop, persistedActivatableValue);
+                                }
+                                else {
+                                    sink.accept(new RefCountInstruction.Inc(activatableValue));
+                                }
+                            }
+                        }
+                    }
+                });
+
+        return Stream.concat(instructionsForNonDirty, instructionsForDirty);
+    }
+
+
+    /// Instruction that operates on `refCount`.
+    ///
+    /// Execution is implemented by [#execute(RefCountInstruction, Session)].
+    ///
+    private sealed interface RefCountInstruction {
+        /// Instruction that decrements `refCount`.
+        record Dec(ActivatableAbstractEntity<?> entity) implements RefCountInstruction {}
+        /// Instruction that increments `refCount`.
+        record Inc(ActivatableAbstractEntity<?> entity) implements RefCountInstruction {}
+    }
+
+    private void execute(final RefCountInstruction instruction, final Session session) {
+        switch (instruction) {
+            case RefCountInstruction.Dec(var entity) -> {
+                final var persistedEntity = (ActivatableAbstractEntity<?>) session.load(entity.getType(), entity.getId(), UPGRADE);
+                persistedEntity.setIgnoreEditableState(true);
+                session.update(persistedEntity.decRefCount());
+            }
+            case RefCountInstruction.Inc(var entity) -> {
+                final var persistedEntity = (ActivatableAbstractEntity<?>) session.load(entity.getType(), entity.getId(), UPGRADE);
+                persistedEntity.setIgnoreEditableState(true);
+                session.update(persistedEntity.incRefCount());
             }
         }
+    }
+
+    /// Creates a failed validation result based on [EntityExistsValidator#ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE]
+    /// with `referencedEntity` in the role of the inactive entity.
+    /// This result is then associated with `mp` via [MetaProperty#setEntityExistsValidationResult(Result)], which fits into the standard validation lifecycle
+    /// (if this result becomes outdated, it will be correctly replaced during revalidation).
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    private Result mkInactiveReferenceFailure(final MetaProperty mp, final ActivatableAbstractEntity<?> referencedEntity) {
+        final var result = failure(ERR_ENTITY_EXISTS_BUT_NOT_ACTIVE.formatted(getEntityTitleAndDesc(referencedEntity.getType()).getKey(), referencedEntity));
+        mp.setEntityExistsValidationResult(result);
+        // `persistedEntity` may be proxied by Hibernate and cannot be serialised, hence cannot be set as the last invalid value.
+        // For this reason we use a refetched instance.
+        // NOTE: Sometimes `persistedEntity` itself is not proxied, but its contents are (values of entity-typed properties).
+        final IEntityDao co = coFinder.find(referencedEntity.getType(), true /* uninstrumented */);
+        final var refetched = co.findById(referencedEntity.getId(), FetchModelReconstructor.reconstruct(referencedEntity));
+        mp.setLastInvalidValue(refetched);
         return result;
     }
 
-    private void assignCreationInfo(final AbstractPersistentEntity<?> entity) {
-        // unit tests utilise a permissive VIRTUAL_USER to persist a "current" user for the testing purposes
-        // VIRTUAL_USER is transient and cannot be set as a value for properties of persistent entities
-        // thus, a check for VIRTUAL_USER as a current user 
-        if (!User.system_users.VIRTUAL_USER.name().equals(currUserOrException().getKey())) {
-            entity.set(AbstractPersistentEntity.CREATED_BY, currUserOrException());
+    /// Assigns properties `entity.createdBy`, `entity.createdDate`, and `entity.createdTransactionGuid` for a new entity.
+    ///
+    /// @param entity an instance to be modified.
+    ///
+    public <A extends AbstractPersistentEntity<?>> PersistentEntitySaver<T> assignCreationInfoForNew(final A entity) {
+        // If `entity` has been already persisted, the creation info should not change.
+        if (entity.isPersisted()) {
+            return this;
         }
-        
+
+        // Unit tests utilise a permissive VIRTUAL_USER to persist a "current" user for the testing purposes.
+        // VIRTUAL_USER is transient and cannot be set as a value for properties of persistent entities.
+        // Thus, need to check if the current user is VIRTUAL_USER to skip the assignment.
+        if (!User.system_users.VIRTUAL_USER.name().equals(currUserOrThrow().getKey())) {
+            entity.set(AbstractPersistentEntity.CREATED_BY, currUserOrThrow());
+        }
+
         entity.set(AbstractPersistentEntity.CREATED_DATE, now.get().toDate());
         entity.set(AbstractPersistentEntity.CREATED_TRANSACTION_GUID, transactionGuid.get());
+        return this;
     }
 
+    /// Assigns properties `entity.lastUpdatedBy`, `entity.lastUpdatedDate`, and `entity.lastUpdatedTransactionGuid` for a persisted entity.
+    /// Specifically skips assignment if `entity` is activatable and there only modified property is `refCount`.
+    ///
     private void assignLastModificationInfo(final AbstractPersistentEntity<?> entity, final AbstractPersistentEntity<?> persistentEntity) {
-        // if the entity is activatable and the only dirty property is refCount than there is no need to update the last-updated-by info
+        // If `entity` is activatable and the only dirty property is `refCount` then there is no need to update the last-updated-by info.
         if (entity instanceof ActivatableAbstractEntity) {
             final List<MetaProperty<?>> dirty = entity.getDirtyProperties();
-            if (dirty.size() == 1 && ActivatableAbstractEntity.REF_COUNT.equals(dirty.get(0).getName())) {
+            if (dirty.size() == 1 && ActivatableAbstractEntity.REF_COUNT.equals(dirty.getFirst().getName())) {
                 return;
             }
         }
-        // unit tests utilise a permissive VIRTUAL_USER to persist a "current" user for the testing purposes
-        // VIRTUAL_USER is transient and cannot be set as a value for properties of persistent entities
-        // thus, a check for VIRTUAL_USER as a current user 
-        if (!User.system_users.VIRTUAL_USER.name().equals(currUserOrException().getKey())) {
-            persistentEntity.set(AbstractPersistentEntity.LAST_UPDATED_BY, currUserOrException());
+
+        // Unit tests utilise a permissive VIRTUAL_USER to persist a "current" user for the testing purposes.
+        // VIRTUAL_USER is transient and cannot be set as a value for properties of persistent entities.
+        // Thus, need to check if the current user is VIRTUAL_USER to skip the assignment.
+        if (!User.system_users.VIRTUAL_USER.name().equals(currUserOrThrow().getKey())) {
+            persistentEntity.set(AbstractPersistentEntity.LAST_UPDATED_BY, currUserOrThrow());
             persistentEntity.set(AbstractPersistentEntity.LAST_UPDATED_DATE, now.get().toDate());
             persistentEntity.set(AbstractPersistentEntity.LAST_UPDATED_TRANSACTION_GUID, transactionGuid.get());
         }
     }
 
-    /**
-     * Returns the current user if defined. Otherwise, throws an exception.
-     * @return
-     */
-    private User currUserOrException() {
-        final User currUser = user.get();
+    /// Returns the current user if defined. Otherwise, it throws an exception.
+    ///
+    public User currUserOrThrow() {
+        final User currUser = userProvider.getUser();
         if (currUser == null) {
-            final String msg = "The current user is not defined.";
-            logger.error(msg);
-            throw new EntityCompanionException(msg);
+            throw new EntityCompanionException(ERR_NO_CURRENT_USER);
         }
         return currUser;
     }
-    /**
-     * Assigns values to all properties marked for assignment before save. This method should be used only during saving of new entities.
-     *
-     * @param entity
-     */
-    private void assignPropertiesBeforeSave(final T entity) {
+
+    /// Assigns values to all properties marked for assignment before save.
+    /// This method should be used only during the saving of new entities.
+    ///
+    /// @param entity an instance to be modified.
+    ///
+    public PersistentEntitySaver<T> assignPropsBeforeSaveForNew(final T entity) {
+        // If `entity` has been already persisted, the creation info should not change.
+        if (entity.isPersisted()) {
+            return this;
+        }
+
         final List<MetaProperty<?>> props = entity.getProperties().values().stream().
-                filter(MetaProperty::shouldAssignBeforeSave).collect(Collectors.toList());
+                filter(MetaProperty::shouldAssignBeforeSave).toList();
         if (!props.isEmpty()) {
             final DateTime rightNow = now.get();
             if (rightNow == null) {
-                throw new EntityCompanionException("The now() constant has not been assigned!");
+                throw new EntityCompanionException(ERR_NOW_CONSTANT_MISSING_VALUE);
             }
 
             for (final MetaProperty<?> prop : props) {
                 final Object value = prop.getValue();
                 if (value == null) {
                     if (User.class.isAssignableFrom(prop.getType())) {
-                        prop.setValue(currUserOrException());
+                        prop.setValue(currUserOrThrow());
                     } else if (Date.class.isAssignableFrom(prop.getType())) {
                         prop.setValue(rightNow.toDate());
                     } else if (DateTime.class.isAssignableFrom(prop.getType())) {
@@ -635,12 +863,62 @@ public final class PersistentEntitySaver<T extends AbstractEntity<?>> implements
                     }
 
                     if (prop.getValue() == null) {
-                        throw new EntityCompanionException(format("Property %s@%s is marked as assignable before save, but no value could be determined.", prop.getName(), entity.getType().getName()));
+                        throw new EntityCompanionException(ERR_NO_VALUE_FOR_AUTO_ASSIGNABLE_PROP.formatted(prop.getName(), entity.getType().getName()));
                     }
                 }
             }
         }
+        return this;
     }
 
+    // This factory must be implemented by hand since com.google.inject.assistedinject.FactoryModuleBuilder
+    // does not support generic factory methods.
+    static final class FactoryImpl implements IFactory {
+        private final IDbVersionProvider dbVersionProvider;
+        private final IEntityFetcher entityFetcher;
+        private final IUserProvider userProvider;
+        private final IUniversalConstants universalConstants;
+        private final ICompanionObjectFinder coFinder;
+        private final IDomainMetadata domainMetadata;
+
+        @Inject
+        FactoryImpl(final IDbVersionProvider dbVersionProvider,
+                    final IEntityFetcher entityFetcher,
+                    final IUserProvider userProvider,
+                    final IUniversalConstants universalConstants,
+                    final ICompanionObjectFinder coFinder,
+                    final IDomainMetadata domainMetadata) {
+            this.dbVersionProvider = dbVersionProvider;
+            this.entityFetcher = entityFetcher;
+            this.userProvider = userProvider;
+            this.universalConstants = universalConstants;
+            this.coFinder = coFinder;
+            this.domainMetadata = domainMetadata;
+        }
+
+        public <E extends AbstractEntity<?>> PersistentEntitySaver<E> create(
+                final Supplier<Session> session,
+                final Supplier<String> transactionGuid,
+                final Class<E> entityType,
+                final Class<? extends Comparable<?>> keyType,
+                final BiConsumer<E, Set<String>> processAfterSaveEvent,
+                final Consumer<MetaProperty<?>> assignBeforeSave,
+                final FindEntityById<E> findById,
+                final Function<EntityResultQueryModel<E>, Boolean> entityExists,
+                final Logger logger)
+        {
+            return new PersistentEntitySaver<>(session, transactionGuid, entityType, keyType, processAfterSaveEvent,
+                                               assignBeforeSave, findById, entityExists, logger,
+                                               dbVersionProvider, entityFetcher, userProvider, universalConstants,
+                                               coFinder, domainMetadata);
+        }
+    }
+
+    @FunctionalInterface
+    public interface FindEntityById<E extends AbstractEntity<?>> {
+
+        E find(Long id, fetch<E> fetchModel, IFillModel<E> fillModel);
+
+    }
 
 }
