@@ -1,110 +1,118 @@
 package ua.com.fielden.platform.ref_hierarchy;
 
+import com.google.common.collect.ImmutableSet;
+import com.google.inject.Inject;
+import ua.com.fielden.platform.basic.config.IApplicationDomainProvider;
+import ua.com.fielden.platform.dao.CommonEntityDao;
+import ua.com.fielden.platform.dao.IEntityAggregatesOperations;
+import ua.com.fielden.platform.dao.annotations.SessionRequired;
+import ua.com.fielden.platform.entity.AbstractEntity;
+import ua.com.fielden.platform.entity.AbstractUnionEntity;
+import ua.com.fielden.platform.entity.ActivatableAbstractEntity;
+import ua.com.fielden.platform.entity.annotation.EntityType;
+import ua.com.fielden.platform.entity.annotation.MapTo;
+import ua.com.fielden.platform.entity.meta.PropertyDescriptor;
+import ua.com.fielden.platform.entity.query.EntityAggregates;
+import ua.com.fielden.platform.entity.query.fluent.fetch;
+import ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator;
+import ua.com.fielden.platform.entity.validation.custom.DomainEntityDependencies.DomainEntityDependency;
+import ua.com.fielden.platform.error.Result;
+import ua.com.fielden.platform.pagination.IPage;
+import ua.com.fielden.platform.reflection.Finder;
+import ua.com.fielden.platform.security.user.User;
+import ua.com.fielden.platform.utils.EntityUtils;
+import ua.com.fielden.platform.utils.Pair;
+
+import java.lang.reflect.Field;
+import java.util.*;
+
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.*;
 import static ua.com.fielden.platform.entity.AbstractEntity.ID;
 import static ua.com.fielden.platform.entity.AbstractUnionEntity.unionProperties;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.fetchKeyAndDescOnly;
 import static ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator.queryForDependentTypeDetails;
 import static ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator.queryForDependentTypesSummary;
+import static ua.com.fielden.platform.entity.validation.ActivePropertyValidator.PREDICATE_ACTIVATABLE_AND_PERSISTENT_ENTITY_TYPE;
+import static ua.com.fielden.platform.entity.validation.custom.DomainEntitiesDependenciesUtils.entityDependencyMap;
 import static ua.com.fielden.platform.error.Result.failure;
 import static ua.com.fielden.platform.error.Result.failuref;
 import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyActions.EDIT;
 import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyActions.REFERENCE_HIERARCHY;
-import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyLevel.REFERENCES;
-import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyLevel.REFERENCE_BY_INSTANCE;
-import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyLevel.REFERENCE_GROUP;
-import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyLevel.TYPE;
+import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyLevel.*;
 import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getEntityTitleAndDesc;
 import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getTitleAndDesc;
-import static ua.com.fielden.platform.utils.CollectionUtil.listOf;
 import static ua.com.fielden.platform.utils.EntityUtils.hasDescProperty;
 
-import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Function;
-
-import com.google.inject.Inject;
-
-import ua.com.fielden.platform.basic.config.IApplicationDomainProvider;
-import ua.com.fielden.platform.dao.CommonEntityDao;
-import ua.com.fielden.platform.dao.IEntityAggregatesOperations;
-import ua.com.fielden.platform.dao.QueryExecutionModel;
-import ua.com.fielden.platform.dao.annotations.SessionRequired;
-import ua.com.fielden.platform.entity.AbstractEntity;
-import ua.com.fielden.platform.entity.AbstractUnionEntity;
-import ua.com.fielden.platform.entity.annotation.EntityType;
-import ua.com.fielden.platform.entity.annotation.MapTo;
-import ua.com.fielden.platform.entity.meta.PropertyDescriptor;
-import ua.com.fielden.platform.entity.query.EntityAggregates;
-import ua.com.fielden.platform.entity.query.IFilter;
-import ua.com.fielden.platform.entity.query.fluent.fetch;
-import ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator;
-import ua.com.fielden.platform.entity.query.model.AggregatedResultQueryModel;
-import ua.com.fielden.platform.error.Result;
-import ua.com.fielden.platform.pagination.IPage;
-import ua.com.fielden.platform.reflection.Finder;
-import ua.com.fielden.platform.security.user.User;
-import ua.com.fielden.platform.utils.CollectionUtil;
-import ua.com.fielden.platform.utils.EntityUtils;
-import ua.com.fielden.platform.utils.Pair;
-/**
- * DAO implementation for companion object {@link IReferenceHierarchy}.
- *
- * @author TG Team
- *
- */
+/// DAO implementation for companion object [IReferenceHierarchy].
+///
+/// @author TG Team
+///
 @EntityType(ReferenceHierarchy.class)
 public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> implements IReferenceHierarchy {
+
     public static final String ERR_ENTITY_TYPE_NOT_FOUND = "Entity type [%s] could not be found.";
+    public static final String ERR_REFERENCE_ENTITY_SHOULD_EXIST = "Please select at least one entity to open reference hierarchy.";
+    public static final String ERR_NO_ASSOCIATED_GENERATOR_FUNCTION = "There is no associated generator function for level: %s";
+    public static final String ERR_COULD_NOT_FIND_ENTITY_TYPE = "Could not find type %s.";
+
+    private static final Set<Class<? extends AbstractEntity<?>>> EXCLUDED_TYPES = ImmutableSet.of(User.class);
 
     private final IEntityAggregatesOperations coAggregates;
-    private final Map<Class<? extends AbstractEntity<?>>, Map<Class<? extends AbstractEntity<?>>, Set<String>>> dependenciesMetadata;
-    private final Map<ReferenceHierarchyLevel, Function<ReferenceHierarchy, List<? extends AbstractEntity<?>>>> generateFunctions;
-    private final Set<Class<? extends AbstractEntity<?>>> systemTypesToExclude;
+    private final IApplicationDomainProvider applicationDomainProvider;
 
     @Inject
-    public ReferenceHierarchyDao(final IFilter filter, final IEntityAggregatesOperations coAggregates, final IApplicationDomainProvider applicationDomainProvider) {
-        super(filter);
+    ReferenceHierarchyDao(final IEntityAggregatesOperations coAggregates, final IApplicationDomainProvider applicationDomainProvider) {
         this.coAggregates = coAggregates;
-        this.dependenciesMetadata = DataDependencyQueriesGenerator.produceDependenciesMetadata(applicationDomainProvider.entityTypes());
-        this.systemTypesToExclude = new HashSet<>();
-        this.systemTypesToExclude.add(User.class);
-        this.generateFunctions = new HashMap<>();
-        this.generateFunctions.put(REFERENCE_GROUP, this::generateReferenceGroup);
-        this.generateFunctions.put(REFERENCE_BY_INSTANCE, this::generateReferenceByInstanceLevelHierarchy);
+        this.applicationDomainProvider = applicationDomainProvider;
     }
 
     @Override
     @SessionRequired
-    public ReferenceHierarchy save(final ReferenceHierarchy entity) {
-        entity.isValid().ifFailure(Result::throwRuntime);
-        if (entity.getRefEntityId() == null) {
-            throw failuref("Please select at least one entity to open reference hierarchy.");
+    public ReferenceHierarchy save(final ReferenceHierarchy action) {
+        action.isValid().ifFailure(Result::throwRuntime);
+        if (action.getRefEntityId() == null) {
+            throw failure(ERR_REFERENCE_ENTITY_SHOULD_EXIST);
         } else {
-            final ReferenceHierarchyLevel nextLevel = entity.getLoadedHierarchyLevel().nextLevel();
-            if (this.generateFunctions.containsKey(nextLevel)) {
-                entity.setGeneratedHierarchy(this.generateFunctions.get(nextLevel).apply(entity));
-            } else {
-                throw failuref("There is no associated generator function for level: %s", nextLevel);
+            final var referencedEntityType = action.getRefEntityClass().orElseThrow(() -> failure(ERR_COULD_NOT_FIND_ENTITY_TYPE.formatted(action.getRefEntityType())));
+            final Map<Class<? extends AbstractEntity<?>>, Map<Class<? extends AbstractEntity<?>>, Set<String>>> dependencies = new HashMap<>();
+            if (!action.isActiveOnly() || !ActivatableAbstractEntity.class.isAssignableFrom(referencedEntityType)) {
+                dependencies.putAll(DataDependencyQueriesGenerator.produceDependenciesMetadata(applicationDomainProvider.entityTypes()));
+            }
+            // In case of active only we need to build the dependency graph in the same way as in ActivePropertyValidator.
+            // This is needed to keep a direct correspondence between the result produced by this validator and the reference hierarchy for users to easily navigate through the dependencies.
+            // One implication of this approach is that the reference hierarchy becomes flatter due to removal of nodes pertaining to deactivatable dependencies.
+            else {
+                final var domainDependencies = entityDependencyMap(applicationDomainProvider.entityTypes(), PREDICATE_ACTIVATABLE_AND_PERSISTENT_ENTITY_TYPE);
+                final var domainEntityDependencies = domainDependencies.get(referencedEntityType);
+                // The result of getAllDependenciesThatCanPreventDeactivation needs to be inverted to make it suitable for the reference hierarchy.
+                final var invertedDependencies = domainEntityDependencies.getAllDependenciesThatCanPreventDeactivation(domainDependencies)
+                        .collect(groupingBy(DomainEntityDependency::entityType,
+                                            mapping(DomainEntityDependency::propPath, toSet())));
+                // Populate dependencies based on the inverted dependencies.
+                // For example, for Person, we get:
+                // WorkActivity -> {Person -> [referredTo, manager.person, returnedToServiceBy.person, technician.person, authoriser]}, which includes the relevant property paths.
+                invertedDependencies.forEach((referencingEntityType, properties) -> dependencies.put(referencingEntityType, Map.of(referencedEntityType, properties)));
+            }
+            final var nextLevel = action.getLoadedHierarchyLevel().nextLevel();
+            switch (nextLevel) {
+                case REFERENCE_GROUP -> action.setGeneratedHierarchy(generateReferenceGroup(action, dependencies));
+                case REFERENCE_BY_INSTANCE -> action.setGeneratedHierarchy(generateReferenceByInstanceLevelHierarchy(action, dependencies));
+                default -> throw failuref(ERR_NO_ASSOCIATED_GENERATOR_FUNCTION, nextLevel);
             }
         }
-        entity.setResetFilter(false);
-        return entity;
+        return action.setResetFilter(false);
     }
 
-    private List<ReferenceHierarchyEntry> generateReferenceGroup(final ReferenceHierarchy entity) {
-        return listOf(createReferenceGroup(generateReferences(entity)), createReferencedByGroup(generateTypeLevelHierarchy(entity)));
+    private List<ReferenceHierarchyEntry> generateReferenceGroup(
+            final ReferenceHierarchy action,
+            final Map<Class<? extends AbstractEntity<?>>, Map<Class<? extends AbstractEntity<?>>, Set<String>>> dependencies)
+    {
+        return List.of(createReferenceGroup(generateReferences(action)), createReferencedByGroup(generateTypeLevelHierarchy(action, dependencies)));
     }
 
     private ReferenceHierarchyEntry createReferencedByGroup(final List<TypeLevelHierarchyEntry> types) {
-        final Integer totalCount = types.stream().reduce(0, (prev, curr) -> prev + curr.getNumberOfEntities(), (prev, curr) -> prev + curr);
+        final Integer totalCount = types.stream().reduce(0, (prev, curr) -> prev + curr.getNumberOfEntities(), Integer::sum);
         final ReferenceHierarchyEntry referencedByEntry = new ReferenceHierarchyEntry();
         referencedByEntry.setKey("Referenced By");
         referencedByEntry.setChildren(types);
@@ -123,16 +131,16 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    private List<ReferenceLevelHierarchyEntry> generateReferences(final ReferenceHierarchy entity) {
-        final Class<? extends AbstractEntity<?>> entityType = entity.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getRefEntityType()));
+    private List<ReferenceLevelHierarchyEntry> generateReferences(final ReferenceHierarchy action) {
+        final Class<? extends AbstractEntity<?>> entityType = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
         final List<Field> entityFields = getReferenceProperties(entityType);
         final fetch fetchModel = generateReferenceFetchModel(entityType, entityFields);
-        final Optional<? extends AbstractEntity<?>> optionalEntity = co(entityType).findByIdOptional(entity.getRefEntityId(), fetchModel);
+        final Optional<? extends AbstractEntity<?>> optionalEntity = co(entityType).findByIdOptional(action.getRefEntityId(), fetchModel);
         return optionalEntity.map(refEntity -> generateReferencesFor(refEntity, getExistentReferenceProperties(refEntity, entityFields))).orElse(emptyList());
     }
 
     private List<Field> getExistentReferenceProperties(final AbstractEntity<?> refEntity, final List<Field> entityFields) {
-        return entityFields.stream().filter(entityField -> refEntity.get(entityField.getName()) != null).collect(toList());
+        return entityFields.stream().filter(entityField -> refEntity.get(entityField.getName()) != null).toList();
     }
 
     @SuppressWarnings("unchecked")
@@ -140,7 +148,7 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
         fetch<? extends AbstractEntity<?>> fetch = fetchKeyAndDescOnly(entityType);
         fetch = hasDescProperty(entityType) ? fetch.with("desc") : fetch;
         for (final Field propField: entityFields) {
-            final Class<? extends AbstractEntity<?>> propertyType = (Class<? extends AbstractEntity<?>>)propField.getType();
+            final Class<? extends AbstractEntity<?>> propertyType = (Class<? extends AbstractEntity<?>>) propField.getType();
             final List<Field> innerProps = new ArrayList<>();
             if (AbstractUnionEntity.class.isAssignableFrom(propertyType)) {
                 innerProps.addAll(unionProperties((Class<? extends AbstractUnionEntity>) propertyType));
@@ -153,12 +161,12 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
 
     private List<Field> getReferenceProperties(final Class<? extends AbstractEntity<?>> entityType) {
         return Finder.findPropertiesThatAreEntities(entityType).stream()
-                .filter(propField -> propField.isAnnotationPresent(MapTo.class) && !PropertyDescriptor.class.isAssignableFrom(propField.getType()) && !systemTypesToExclude.contains(propField.getType()))
-                .collect(toList());
+                .filter(propField -> propField.isAnnotationPresent(MapTo.class) && !PropertyDescriptor.class.isAssignableFrom(propField.getType()) && !EXCLUDED_TYPES.contains(propField.getType()))
+                .toList();
     }
 
     private List<ReferenceLevelHierarchyEntry> generateReferencesFor(final AbstractEntity<?> entity, final List<Field> entityFields) {
-        return entityFields.stream().map(propField -> generateReferenceFor(entity, propField)).collect(toList());
+        return entityFields.stream().map(propField -> generateReferenceFor(entity, propField)).toList();
     }
 
     private ReferenceLevelHierarchyEntry generateReferenceFor(final AbstractEntity<?> entity, final Field propField) {
@@ -178,25 +186,29 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
         return entry;
     }
 
-    private List<ReferencedByLevelHierarchyEntry> generateReferenceByInstanceLevelHierarchy(final ReferenceHierarchy entity) {
-        final Class<? extends AbstractEntity<?>> entityClass = entity.getEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getEntityType()));
-        final Class<? extends AbstractEntity<?>> refEntityClass = entity.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getRefEntityType()));
-        final List<Field> propFields = getReferenceProperties(entityClass);
-        final QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel> qem = queryForDependentTypeDetails(dependenciesMetadata, entity.getRefEntityId(), refEntityClass, entityClass, generateReferenceFetchModel(entityClass, propFields));
+    private List<ReferencedByLevelHierarchyEntry> generateReferenceByInstanceLevelHierarchy(
+            final ReferenceHierarchy action,
+            final Map<Class<? extends AbstractEntity<?>>, Map<Class<? extends AbstractEntity<?>>, Set<String>>> dependencies)
+    {
+        final var entityClass = action.getEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getEntityType()));
+        final var refEntityClass = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
+        final var propFields = getReferenceProperties(entityClass);
+        final var fetchModel = generateReferenceFetchModel(entityClass, propFields);
+        final var qem = queryForDependentTypeDetails(dependencies, action.getRefEntityId(), refEntityClass, entityClass, fetchModel, action.isActiveOnly());
         final IPage<EntityAggregates> loadedPage;
-        if (entity.getPageNumber() == 0) {
-            loadedPage = coAggregates.firstPage(qem, entity.getPageSize());
+        if (action.getPageNumber() == 0) {
+            loadedPage = coAggregates.firstPage(qem, action.getPageSize());
         } else {
-            loadedPage = coAggregates.getPage(qem, entity.getPageNumber(), entity.getPageSize());
+            loadedPage = coAggregates.getPage(qem, action.getPageNumber(), action.getPageSize());
         }
-        entity.setPageCount(loadedPage.numberOfPages());
-        entity.setPageNumber(loadedPage.no());
+        action.setPageCount(loadedPage.numberOfPages());
+        action.setPageNumber(loadedPage.no());
 
         return createInstanceHierarchy(loadedPage.data(), propFields);
     }
 
     private List<ReferencedByLevelHierarchyEntry> createInstanceHierarchy(final List<EntityAggregates> instanceAggregates, final List<Field> propFields) {
-        return instanceAggregates.stream().map(instanceAggregate -> createInstanceHierarchyEntry(instanceAggregate, propFields)).collect(toList());
+        return instanceAggregates.stream().map(instanceAggregate -> createInstanceHierarchyEntry(instanceAggregate, propFields)).toList();
     }
 
     private ReferencedByLevelHierarchyEntry createInstanceHierarchyEntry(final EntityAggregates instanceAggregate, final List<Field> propFields) {
@@ -212,20 +224,23 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
         return instanceEntry;
     }
 
-    private List<TypeLevelHierarchyEntry> generateTypeLevelHierarchy(final ReferenceHierarchy entity) {
-        final Class<? extends AbstractEntity<?>> entityType = entity.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getRefEntityType()));
-        final Optional<QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel>> model = queryForDependentTypesSummary(dependenciesMetadata, entity.getRefEntityId(), entityType);
-        final List<EntityAggregates> result = model.map(qem -> coAggregates.getAllEntities(qem)).orElse(emptyList());
-        return createTypeHierarchyEntries(entity, result);
+    private List<TypeLevelHierarchyEntry> generateTypeLevelHierarchy(
+            final ReferenceHierarchy action,
+            final Map<Class<? extends AbstractEntity<?>>, Map<Class<? extends AbstractEntity<?>>, Set<String>>> dependencies)
+    {
+        final var entityType = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
+        final var model = queryForDependentTypesSummary(dependencies, action.getRefEntityId(), entityType, action.isActiveOnly());
+        final var result = model.map(coAggregates::getAllEntities).orElse(emptyList());
+        return createTypeHierarchyEntries(action, result);
 
     }
 
-    private List<TypeLevelHierarchyEntry> createTypeHierarchyEntries(final ReferenceHierarchy entity, final List<EntityAggregates> typeAggregates) {
-        return typeAggregates.stream().map(typeAggregate -> createTypeHierarchyEntry(entity, typeAggregate)).collect(toList());
+    private List<TypeLevelHierarchyEntry> createTypeHierarchyEntries(final ReferenceHierarchy action, final List<EntityAggregates> typeAggregates) {
+        return typeAggregates.stream().map(typeAggregate -> createTypeHierarchyEntry(action, typeAggregate)).toList();
     }
 
     @SuppressWarnings("unchecked")
-    private TypeLevelHierarchyEntry createTypeHierarchyEntry(final ReferenceHierarchy entity, final EntityAggregates typeAggregate) {
+    private TypeLevelHierarchyEntry createTypeHierarchyEntry(final ReferenceHierarchy action, final EntityAggregates typeAggregate) {
         try {
             final TypeLevelHierarchyEntry typeEntry = new TypeLevelHierarchyEntry();
             final String entityType = typeAggregate.get("type");
@@ -234,8 +249,8 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
             typeEntry.setKey(titleAndDesc.getKey());
             typeEntry.setDesc(titleAndDesc.getValue());
             typeEntry.setEntityType(entityType);
-            typeEntry.setRefEntityId(entity.getRefEntityId());
-            typeEntry.setRefEntityType(entity.getRefEntityType());
+            typeEntry.setRefEntityId(action.getRefEntityId());
+            typeEntry.setRefEntityType(action.getRefEntityType());
             typeEntry.setNumberOfEntities(Optional.ofNullable(typeAggregate.get("qty")).map(v -> Integer.valueOf(v.toString())).orElse(0));
             typeEntry.setHierarchyLevel(TYPE);
             typeEntry.setHasChildren(true);
