@@ -1,32 +1,12 @@
 package ua.com.fielden.platform.dao.dynamic;
 
-import static org.junit.Assert.assertEquals;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.cond;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
-import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.createQuery;
-import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.getEmptyValue;
-import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.getPropertyNameWithoutKeyPart;
-import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.prepCritValuesForEntityTypedProp;
-
-import java.io.ByteArrayInputStream;
-import java.io.UnsupportedEncodingException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-
+import com.google.inject.Injector;
 import org.hibernate.HibernateException;
 import org.hibernate.MappingException;
 import org.hibernate.cfg.Configuration;
 import org.junit.Before;
 import org.junit.Test;
-
-import com.google.inject.Injector;
-
+import ua.com.fielden.platform.basic.config.IApplicationDomainProvider;
 import ua.com.fielden.platform.domaintree.ICalculatedProperty.CalculatedPropertyAttribute;
 import ua.com.fielden.platform.domaintree.IDomainTreeEnhancer;
 import ua.com.fielden.platform.domaintree.impl.DomainTreeEnhancer;
@@ -43,39 +23,40 @@ import ua.com.fielden.platform.entity_centre.mnemonics.DateRangePrefixEnum;
 import ua.com.fielden.platform.entity_centre.mnemonics.DateRangeSelectorEnum;
 import ua.com.fielden.platform.entity_centre.mnemonics.MnemonicEnum;
 import ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder;
-import ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.QueryProperty;
 import ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator;
-import ua.com.fielden.platform.eql.meta.EqlDomainMetadata;
+import ua.com.fielden.platform.eql.dbschema.PropertyInlinerImpl;
+import ua.com.fielden.platform.eql.meta.EqlTables;
 import ua.com.fielden.platform.ioc.ApplicationInjectorFactory;
-import ua.com.fielden.platform.persistence.types.DateTimeType;
-import ua.com.fielden.platform.persistence.types.SimpleMoneyType;
+import ua.com.fielden.platform.meta.DomainMetadataBuilder;
+import ua.com.fielden.platform.meta.DomainMetadataUtils;
+import ua.com.fielden.platform.persistence.types.PlatformHibernateTypeMappings;
 import ua.com.fielden.platform.reflection.PropertyTypeDeterminator;
-import ua.com.fielden.platform.sample.domain.TgBogie;
-import ua.com.fielden.platform.test.CommonTestEntityModuleWithPropertyFactory;
-import ua.com.fielden.platform.test.EntityModuleWithPropertyFactory;
-import ua.com.fielden.platform.types.Money;
+import ua.com.fielden.platform.sample.domain.*;
+import ua.com.fielden.platform.test.CommonEntityTestIocModuleWithPropertyFactory;
 import ua.com.fielden.platform.utils.IDates;
+
+import java.io.ByteArrayInputStream;
+import java.io.UnsupportedEncodingException;
+import java.util.*;
+
+import static org.junit.Assert.assertEquals;
+import static ua.com.fielden.platform.entity.AbstractEntity.KEY;
+import static ua.com.fielden.platform.entity.query.IDbVersionProvider.constantDbVersion;
+import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.cond;
+import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
+import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.*;
 
 /**
  * A test for {@link DynamicQueryBuilder}.
- *
- * @author TG Team
- *
  */
-@SuppressWarnings({ "serial", "unchecked" })
+@SuppressWarnings({"unchecked"})
 public class DynamicQueryBuilderSqlTest {
-    private final static Injector injector = createInjector();
-    private final static EntityFactory entityFactory = createFactory();
+
+    private final static Injector injector = new ApplicationInjectorFactory()
+            .add(new CommonEntityTestIocModuleWithPropertyFactory())
+            .getInjector();
+    private final static EntityFactory entityFactory = injector.getInstance(EntityFactory.class);
     private final static IDates dates = injector.getInstance(IDates.class);
-
-    private static Injector createInjector() {
-        final EntityModuleWithPropertyFactory module = new CommonTestEntityModuleWithPropertyFactory();
-        return new ApplicationInjectorFactory().add(module).getInjector();
-    }
-
-    private static EntityFactory createFactory() {
-        return injector.getInstance(EntityFactory.class);
-    }
 
     private final String alias;
     private final Class<? extends AbstractEntity<?>> masterKlass, slaveCollectionType, evenSlaverCollectionType;
@@ -85,11 +66,7 @@ public class DynamicQueryBuilderSqlTest {
     {
         alias = "alias_for_main_criteria_type";
         // enhance domain with ALL / ANY calc properties
-        final IDomainTreeEnhancer dte = new DomainTreeEnhancer(entityFactory, new HashSet<Class<?>>() {
-            {
-                add(MasterEntity.class);
-            }
-        });
+        final IDomainTreeEnhancer dte = new DomainTreeEnhancer(entityFactory, Set.of(MasterEntity.class));
         dte.addCalculatedProperty(MasterEntity.class, "collection", "masterEntityProp", "Any of masterEntityProp", "Desc", CalculatedPropertyAttribute.ANY, "masterEntityProp", IsProperty.DEFAULT_PRECISION, IsProperty.DEFAULT_SCALE);
         dte.addCalculatedProperty(MasterEntity.class, "collection", "bigDecimalProp", "Any of bigDecimalProp", "Desc", CalculatedPropertyAttribute.ANY, "bigDecimalProp", 19, 4);
         dte.addCalculatedProperty(MasterEntity.class, "collection", "dateProp", "Any of dateProp", "Desc", CalculatedPropertyAttribute.ANY, "dateProp", IsProperty.DEFAULT_PRECISION, IsProperty.DEFAULT_SCALE);
@@ -114,67 +91,68 @@ public class DynamicQueryBuilderSqlTest {
 
         final Configuration hibConf = new Configuration();
 
-        final Map<Class<?>, Class<?>> hibTypeMap = new HashMap<>();
-        hibTypeMap.put(Date.class, DateTimeType.class);
-        hibTypeMap.put(Money.class, SimpleMoneyType.class);
-        final List<Class<? extends AbstractEntity<?>>> domainTypes = new ArrayList<>();
-        domainTypes.add(MasterEntity.class);
-        domainTypes.add(SlaveEntity.class);
-        domainTypes.add(EvenSlaverEntity.class);
+        final List<Class<? extends AbstractEntity<?>>> domainTypes = List.of(MasterEntity.class, SlaveEntity.class, EvenSlaverEntity.class);
+        final IApplicationDomainProvider appDomain = () -> domainTypes;
+
+        final var dbVersionProvider = constantDbVersion(DbVersion.H2);
+        final var domainMetadata = new DomainMetadataBuilder(
+                new PlatformHibernateTypeMappings.Provider(dbVersionProvider).get(), domainTypes, dbVersionProvider)
+                .build();
+        final var domainMetadataUtils = new DomainMetadataUtils(appDomain, domainMetadata);
         try {
-            hibConf.addInputStream(new ByteArrayInputStream(HibernateMappingsGenerator.generateMappings(new EqlDomainMetadata(hibTypeMap, null, domainTypes, DbVersion.H2)).getBytes("UTF8")));
+            hibConf.addInputStream(new ByteArrayInputStream(
+                    new HibernateMappingsGenerator(domainMetadata, domainMetadataUtils,
+                                                   dbVersionProvider,
+                                                   new EqlTables(domainMetadata, domainMetadataUtils),
+                                                   new PropertyInlinerImpl(domainMetadata))
+                            .generateMappings().getBytes("UTF8")));
         } catch (final MappingException | UnsupportedEncodingException e) {
             throw new HibernateException("Could not add mappings.", e);
         }
 
-        final List<String> propertyNames = Arrays.asList(new String[] { //
-        "integerProp", //
-        "doubleProp", //
-        "bigDecimalProp", //
-        "moneyProp", //
-        "dateProp", //
-        "booleanProp", //
-        "stringProp", //
-        "entityProp", //
-        "entityProp.masterEntityProp", //
-        "entityProp.integerProp", //
-        "entityProp.doubleProp", //
-        "entityProp.bigDecimalProp", //
-        "entityProp.moneyProp", //
-        "entityProp.dateProp", //
-        "entityProp.booleanProp", //
-        "entityProp.stringProp", //
-        "collection.masterEntityProp", //
-        "collection.integerProp", //
-        "collection.doubleProp", //
-        "collection.bigDecimalProp", //
-        "collection.dateProp", //
-        "collection.stringProp", //
-        "collection.booleanProp", //
-        "collection.anyOfMasterEntityProp", //
-        "collection.anyOfBigDecimalProp", //
-        "collection.anyOfDateProp", //
-        "collection.anyOfIntegerProp", //
-        "collection.anyOfMoneyProp", //
-        "collection.allOfMasterEntityProp", //
-        "collection.allOfBigDecimalProp", //
-        "collection.allOfDateProp", //
-        "entityProp.collection.slaveEntityProp", //
-        "entityProp.collection.integerProp", //
-        "entityProp.collection.doubleProp", //
-        "entityProp.collection.bigDecimalProp", //
-        "entityProp.collection.dateProp", //
-        "entityProp.collection.stringProp", //
-        "entityProp.collection.booleanProp", //
-        "entityProp.collection.allOfSlaveEntityProp", //
-        "entityProp.collection.allOfBigDecimalProp", //
-        "entityProp.collection.allOfDateProp", //
-        "entityProp.collection.anyOfIntegerProp", //
-        "entityProp.collection.anyOfMoneyProp" //
+        final var propertyNames = List.of(
+                "integerProp",
+                "bigDecimalProp",
+                "moneyProp",
+                "dateProp",
+                "booleanProp",
+                "stringProp",
+                "entityProp",
+                "entityProp.masterEntityProp",
+                "entityProp.integerProp",
+                "entityProp.bigDecimalProp",
+                "entityProp.moneyProp",
+                "entityProp.dateProp",
+                "entityProp.booleanProp",
+                "entityProp.stringProp",
+                "collection.masterEntityProp",
+                "collection.integerProp",
+                "collection.bigDecimalProp",
+                "collection.dateProp",
+                "collection.stringProp",
+                "collection.booleanProp",
+                "collection.anyOfMasterEntityProp",
+                "collection.anyOfBigDecimalProp",
+                "collection.anyOfDateProp",
+                "collection.anyOfIntegerProp",
+                "collection.anyOfMoneyProp",
+                "collection.allOfMasterEntityProp",
+                "collection.allOfBigDecimalProp",
+                "collection.allOfDateProp",
+                "entityProp.collection.slaveEntityProp",
+                "entityProp.collection.integerProp",
+                "entityProp.collection.bigDecimalProp",
+                "entityProp.collection.dateProp",
+                "entityProp.collection.stringProp",
+                "entityProp.collection.booleanProp",
+                "entityProp.collection.allOfSlaveEntityProp",
+                "entityProp.collection.allOfBigDecimalProp",
+                "entityProp.collection.allOfDateProp",
+                "entityProp.collection.anyOfIntegerProp",
+                "entityProp.collection.anyOfMoneyProp");
 
-        });
-        for (final String propertyName : propertyNames) {
-            final QueryProperty qp = new QueryProperty(masterKlass, propertyName);
+        for (final var propertyName : propertyNames) {
+            final var qp = new QueryProperty(masterKlass, propertyName);
             queryProperties.put(propertyName, qp);
             qp.setValue(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setValue2(getEmptyValue(qp.getType(), qp.isSingle()));
@@ -190,7 +168,7 @@ public class DynamicQueryBuilderSqlTest {
     @Before
     public void set_up() {
         // make the values to be default for all properties before any test
-        for (final QueryProperty qp : queryProperties.values()) {
+        for (final var qp : queryProperties.values()) {
             qp.setValue(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setValue2(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setExclusive(null);
@@ -206,8 +184,7 @@ public class DynamicQueryBuilderSqlTest {
 
     @Test
     public void test_empty_query_composition_for_empty_query_properties() {
-        final ICompleted<? extends AbstractEntity<?>> expected = //
-        /**/iJoin; //
+        final ICompleted<? extends AbstractEntity<?>> expected = iJoin;
         final ICompleted<? extends AbstractEntity<?>> actual = createQuery(masterKlass, new ArrayList<>(queryProperties.values()), dates);
 
         assertEquals("Incorrect query model has been built.", expected.model(), actual.model());
@@ -265,12 +242,6 @@ public class DynamicQueryBuilderSqlTest {
     public void test_atomic_query_composition_for_integer_range_type() {
         test_atomic_query_composition_for_range_type("integerProp");
         test_atomic_query_composition_for_range_type("entityProp.integerProp");
-    }
-
-    @Test
-    public void test_atomic_query_composition_for_double_range_type() {
-        test_atomic_query_composition_for_range_type("doubleProp");
-        test_atomic_query_composition_for_range_type("entityProp.doubleProp");
     }
 
     @Test
@@ -604,14 +575,16 @@ public class DynamicQueryBuilderSqlTest {
 
         set_up();
         final QueryProperty property = queryProperties.get(propertyName);
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        final var values = List.of("some val 1*", "some val 2*");
+        property.setValue(values);
 
         final String cbn = property.getConditionBuildingName();
+        final var cbnNoKey = getPropertyNameWithoutKeyPart(cbn);
 
         final ICompleted<? extends AbstractEntity<?>> expected = //
         /**/iJoin.where().condition(cond() //
-        /*  */.condition(cond().prop(getPropertyNameWithoutKeyPart(cbn)).isNotNull().and() //
-        /*    */.condition(cond().prop(cbn).iLike().anyOfValues((Object[]) DynamicQueryBuilder.prepCritValuesForEntityTypedProp((List<String>) property.getValue())).model()) //
+        /*  */.condition(cond().prop(cbnNoKey).isNotNull().and() //
+        /*    */.condition(cond().prop(cbnNoKey).in().model(select(SlaveEntity.class).where().prop(KEY).iLike().anyOfValues(prepCritValuesForEntityTypedProp(values)).model()).model())
         /*  */.model()) //
         /**/.model()); //
         final ICompleted<? extends AbstractEntity<?>> actual = createQuery(masterKlass, new ArrayList<>(queryProperties.values()), dates);
@@ -665,7 +638,7 @@ public class DynamicQueryBuilderSqlTest {
                             .and()
                             .condition(
                                 cond().prop(cbnNoKey).in().model(subSelect)
-                                .or().prop(cbn).iLike().anyOfValues(prepCritValuesForEntityTypedProp(Arrays.asList(critValuesWithWildcard)))
+                                .or().prop(cbnNoKey).in().model(select(SlaveEntity.class).where().prop(KEY).iLike().anyOfValues(prepCritValuesForEntityTypedProp(Arrays.asList(critValuesWithWildcard))).model())
                                 .model())
                         .model())
                 .model();
@@ -849,7 +822,6 @@ public class DynamicQueryBuilderSqlTest {
         // Properties sequence is the following:
         //
         // integerProp
-        // doubleProp
         // bigDecimalProp
         // moneyProp
         // dateProp
@@ -1370,17 +1342,15 @@ public class DynamicQueryBuilderSqlTest {
 
     @Test
     public void test_union_entity_query_composition() {
-        final List<String> propertyNames = Arrays.asList(new String[] { //
-        "", //
-        "desc", //
-        "location", //
-        "location.workshop", //
-        "location.workshop.desc", //
-        "location.wagonSlot", //
-        "location.wagonSlot.wagon", //
-        "location.wagonSlot.position", //
-
-        });
+        final List<String> propertyNames = List.of(
+                "",
+                "desc",
+                "location",
+                "location.workshop",
+                "location.workshop.desc",
+                "location.wagonSlot",
+                "location.wagonSlot.wagon",
+                "location.wagonSlot.position");
         final Map<String, QueryProperty> unionProps = new LinkedHashMap<>();
         for (final String propertyName : propertyNames) {
             final QueryProperty qp = new QueryProperty(TgBogie.class, propertyName);
@@ -1392,25 +1362,25 @@ public class DynamicQueryBuilderSqlTest {
         QueryProperty property = null;
 
         property = unionProps.get("");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("desc");
         property.setValue("Some string value");
 
         property = unionProps.get("location");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.workshop");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.workshop.desc");
         property.setValue("Some string value");
 
         property = unionProps.get("location.wagonSlot");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.wagonSlot.wagon");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.wagonSlot.position");
         property.setValue(3);
@@ -1419,30 +1389,30 @@ public class DynamicQueryBuilderSqlTest {
         final ICompleted<? extends AbstractEntity<?>> expected = //
         /**/select(select(TgBogie.class).model().setShouldMaterialiseCalcPropsAsColumnsInSqlQuery(true)).as(alias).where().condition(cond() //
         /*  */.condition(cond().prop(alias).isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+           /*    */.condition(cond().prop(alias).in().model(select(TgBogie.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*  */.model()).and()//
         /*  */.condition(cond().prop(alias + ".desc").isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".desc").iLike().anyOfValues(new Object[] { "%Some string value%" }).model()) //
+        /*    */.condition(cond().prop(alias + ".desc").iLike().anyOfValues("%Some string value%").model()) //
         /*  */.model()).and()//
         /*  */.condition(cond().prop(alias + ".location").isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".location.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*    */.condition(cond().prop(alias + ".location.id").in().model(select(TgBogieLocation.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*  */.model()).and()//
         /*    */.condition(cond()//
         /*	*/.condition(cond()//
         /*	  */.condition(cond().prop(alias + ".location.workshop").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.workshop.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*	    */.condition(cond().prop(alias + ".location.workshop").in().model(select(TgWorkshop.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.workshop.desc").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.workshop.desc").iLike().anyOfValues(new Object[] { "%Some string value%" }).model())
+        /*	    */.condition(cond().prop(alias + ".location.workshop.desc").iLike().anyOfValues("%Some string value%").model())
                 /*	  */.model())//
         /*	*/.model())//
         /*    */.or()//
         /*	*/.condition(cond()//
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*	    */.condition(cond().prop(alias + ".location.wagonSlot").in().model(select(TgWagonSlot.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot.wagon").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.wagon.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.wagon").in().model(select(TgWagon.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot.position").isNotNull().and()//
         /*	    */.condition(cond().prop(alias + ".location.wagonSlot.position").ge().iVal(3).and().prop(alias + ".location.wagonSlot.position").le().iVal(7).model())//
