@@ -12,9 +12,9 @@ import org.apache.logging.log4j.Logger;
 import ua.com.fielden.platform.dao.QueryExecutionModel;
 import ua.com.fielden.platform.domaintree.centre.IOrderingRepresentation.Ordering;
 import ua.com.fielden.platform.entity.AbstractEntity;
-import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IOrderingItem;
-import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IOrderingItemCloseable;
-import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.ISingleOperandOrderable;
+import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces;
+import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.StandaloneOrderBy.IOrderingItem;
+import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.StandaloneOrderBy.IOrderingItemCloseable;
 import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
 import ua.com.fielden.platform.entity_centre.review.DynamicPropertyAnalyser;
 import ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder;
@@ -24,6 +24,7 @@ import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.types.tuples.T3;
 import ua.com.fielden.platform.utils.IDates;
 import ua.com.fielden.platform.utils.Pair;
+import ua.com.fielden.platform.web_api.exceptions.WebApiException;
 
 import java.math.BigDecimal;
 import java.util.*;
@@ -71,10 +72,14 @@ public class RootEntityUtils {
      * This is a part of GraphQL spec.
      */
     private static final String __TYPENAME = "__typename";
-    public static final String WARN_ORDER_PRIORITIES_ARE_NOT_DISTINCT = "Order priorities are not distinct.";
     static final String QUERY_TYPE_NAME = "Query";
+
+    public static final String ERR_EQ_AND_LIKE_ARE_MUTUALLY_EXCLUSIVE = "Conditions `eq` and `like` are mutually exclusive. Please remove one or both conditions.";
+    public static final String ERR_EQ_DOES_NOT_PERMIT_WILDCARDS = "Value for `eq` should not contain wildcard symbols (`*`).";
+    public static final String WARN_ORDER_PRIORITIES_ARE_NOT_DISTINCT = "Order priorities are not distinct.";
+
     private static final Logger LOGGER = getLogger(RootEntityUtils.class);
-    
+
     /**
      * Returns function for generation of EQL query execution model for retrieving {@code rootField} and its selection set in GraphQL query or mutation [and optional warning about ordering].
      * The argument of function is {@link IDates} instance from which 'now' moment can properly be retrieved and used for date property filtering.
@@ -126,7 +131,7 @@ public class RootEntityUtils {
                 locale
             ))
             .flatMap(orderingProperty -> orderingProperty.isPresent() ? Stream.of(orderingProperty.get()) : Stream.empty())
-            .collect(toList()); // exclude empty values
+            .toList(); // exclude empty values
         final Optional<String> optionalWarning = propOrderingWithPriorities.stream().map(t3 -> t3._3).distinct().count() < propOrderingWithPriorities.size() ? of(WARN_ORDER_PRIORITIES_ARE_NOT_DISTINCT) : empty(); // in case where order priorities are not distinct, return non-intrusive warning (with data still present)
         final List<Pair<String, Ordering>> specifiedOrderingProperties = propOrderingWithPriorities.stream()
             .sorted((p1, p2) -> p1._3.compareTo(p2._3)) // sort by ordering priority
@@ -180,7 +185,7 @@ public class RootEntityUtils {
      */
     private static <T extends AbstractEntity<?>> IOrderingItemCloseable appendPropertyOrdering(final IOrderingItem partialOrderingModel, final Pair<String, Ordering> propertyOrdering, final Class<T> entityType) {
         // we use '.prop(' EQL ordering instead of '.yield(' -- ordering by yield is only required for ad-hoc calculated properties that are not supported in Web API yet
-        final ISingleOperandOrderable part = partialOrderingModel.prop(createConditionProperty(new DynamicPropertyAnalyser(entityType, propertyOrdering.getKey()).getCriteriaFullName())); // createConditionProperty is required because of the need to have property prepended with alias
+        final EntityQueryProgressiveInterfaces.StandaloneOrderBy.ISingleOperandOrderable part = partialOrderingModel.prop(createConditionProperty(new DynamicPropertyAnalyser(entityType, propertyOrdering.getKey()).getCriteriaFullName())); // createConditionProperty is required because of the need to have property prepended with alias
         return ASCENDING.equals(propertyOrdering.getValue()) ? part.asc() : part.desc();
     }
     
@@ -218,16 +223,30 @@ public class RootEntityUtils {
         // These guidelines include a) resolving from argument literals b) resolving from raw variable values c) scalar values coercion etc.
         // Please follow these guidelines even if ValuesResolver will be made even more private, however this is unlikely scenario.
         final Map<String, Object> argumentValues = getArgumentValues(codeRegistry, arguments._1, arguments._2, of(variables), context, locale);
-        
-        if (isString(type)) {
-            ofNullable(argumentValues.get(LIKE)).ifPresent(value -> {
-                queryProperty.setValue(value);
-            });
-        } else if (isEntityType(type)) {
-            ofNullable(argumentValues.get(LIKE)).ifPresent(value -> {
-                queryProperty.setValue(queryProperty.isSingle() ? value : asList(((String) value).split(",")));
-            });
-        } else if (isBoolean(type)) {
+
+        if (isString(type) || isEntityType(type)) {
+            if (argumentValues.get(EQ) != null && argumentValues.get(LIKE) != null) {
+                throw new WebApiException(ERR_EQ_AND_LIKE_ARE_MUTUALLY_EXCLUSIVE);
+            }
+
+            if (argumentValues.get(EQ) != null) {
+                final var searchValue = (String) argumentValues.get(EQ);
+                if (searchValue.contains("*")) {
+                    throw new WebApiException(ERR_EQ_DOES_NOT_PERMIT_WILDCARDS);
+                }
+                queryProperty.setValue(searchValue);
+                queryProperty.setSingle(true); // a search value should only be recognised as representing a single value (i.e. not comma separated).
+                queryProperty.setMatchAnywhere(false); // match exactly
+            }
+            else if (argumentValues.get(LIKE) != null) {
+                final var searchValue = (String) argumentValues.get(LIKE);
+                // The searchValue must be of type String for string-typed criteria even if it represents comma separated values.
+                // However, for entity-typed criteria, comma separated values need to be... separated, and represented as a list.
+                queryProperty.setValue(queryProperty.isSingle() || isString(type) ? searchValue : asList(searchValue.split(",")));
+                queryProperty.setMatchAnywhere(isString(type)); // match anywhere only applies to string-typed criteria
+            }
+        }
+        else if (isBoolean(type)) {
             ofNullable(argumentValues.get(VALUE)).ifPresent(value -> {
                 if ((boolean) value) { // default empty values are 'true' for both 'value' and 'value2'
                     queryProperty.setValue2(false);
@@ -235,18 +254,15 @@ public class RootEntityUtils {
                     queryProperty.setValue(false);
                 }
             });
-        } else if (Integer.class.isAssignableFrom(type)
+        }
+        else if (Integer.class.isAssignableFrom(type)
             || Long.class.isAssignableFrom(type)
             || BigDecimal.class.isAssignableFrom(type)
             || Money.class.isAssignableFrom(type)
             || Date.class.isAssignableFrom(type)
         ) {
-            ofNullable(argumentValues.get(FROM)).ifPresent(value -> {
-                queryProperty.setValue(value);
-            });
-            ofNullable(argumentValues.get(TO)).ifPresent(value -> {
-                queryProperty.setValue2(value);
-            });
+            ofNullable(argumentValues.get(FROM)).ifPresent(queryProperty::setValue);
+            ofNullable(argumentValues.get(TO)).ifPresent(queryProperty::setValue2);
         }
         return queryProperty;
     }
@@ -400,7 +416,7 @@ public class RootEntityUtils {
     private static List<Field> toFields(final SelectionSet selectionSet, final Map<String, FragmentDefinition> fragmentDefinitions) {
         final List<Field> selectionFields = new ArrayList<>();
         if (selectionSet != null) {
-            for (final Selection selection: selectionSet.getSelections()) {
+            for (final Selection<?> selection: selectionSet.getSelections()) {
                 if (selection instanceof Field) {
                     selectionFields.add((Field) selection);
                 } else if (selection instanceof final FragmentSpread fragmentSpread) {
@@ -410,7 +426,7 @@ public class RootEntityUtils {
                     selectionFields.addAll(toFields(inlineFragment.getSelectionSet(), fragmentDefinitions));
                 } else {
                     // this is the only three types of possible selections; log warning if something else appeared
-                    LOGGER.warn(format("Unknown Selection [%s] has appeared.", Objects.toString(selection))); // 'null' selection is possible
+                    LOGGER.warn("Unknown Selection [{}] has appeared.", Objects.toString(selection)); // 'null' selection is possible
                 }
             }
         }
